对接权限系统

--- a/packages/repo-operation/.env
+++ b/packages/repo-operation/.env
@@ -14,7 +14,7 @@ VUE_APP_RELEASE_FLODER_PATH = '/'
 VUE_APP_MOCK_API = 'https://devyapi.holoalpha.com/mock/47/'
 
 ## Server API
-VUE_APP_BASE_API = 'https://devoperate.holoalpha.com/'
+VUE_APP_BASE_API = 'https://devservice.imedcloud.jk.com/'
 
 ## 处方运营端系统地址
 VUE_APP_OPERATION_SITE = 'https://devduroc.imedcloud.jk.com/'
@@ -24,3 +24,17 @@ VUE_APP_NETHOSPITAL = 'https://devapi.holoalpha.com/backend/#'
 
 ## 互医机构端端系统地址
 VUE_APP_NETHOSPITAL_ORG = 'https://devapi.holoalpha.com/mechanism/#/'
+
+# AUTH CONFIG
+## CLIENT_ID
+VUE_APP_AUTH_CLIENT_ID = 'operation'
+## CLIENT_SECRET
+VUE_APP_AUTH_CLIENT_SECRET = 'operation'
+## 加密私有 key
+VUE_APP_AUTH_ENCRYPTION_KEY = 'sksksksksksksksk'
+## Auth API
+VUE_APP_AUTH_API = 'https://devauth.imedcloud.jk.com/'
+
+## WS API
+VUE_APP_WS_API = 'https://devauth.imedcloud.jk.com/'
+
