--- a/packages/repo-operation/.env
+++ b/packages/repo-operation/.env
@@ -5,25 +5,6 @@
 ## 编译模式
 NODE_ENV = 'development'
 
-## Nginx 虚拟路径
-VUE_APP_RELEASE_FLODER_PATH = '/'
-
-
-## API 路径
-## Mock API 
-VUE_APP_MOCK_API = 'https://devyapi.holoalpha.com/mock/47/'
-
-## Server API
-VUE_APP_BASE_API = 'https://devservice.imedcloud.jk.com/'
-
-## 处方运营端系统地址
-VUE_APP_OPERATION_SITE = 'https://devduroc.imedcloud.jk.com/'
-
-## 互医运营端系统地址
-VUE_APP_NETHOSPITAL = 'https://devapi.holoalpha.com/backend/#'
-
-## 互医机构端端系统地址
-VUE_APP_NETHOSPITAL_ORG = 'https://devapi.holoalpha.com/mechanism/#/'
 
 # AUTH CONFIG
 ## CLIENT_ID
@@ -32,9 +13,29 @@ VUE_APP_AUTH_CLIENT_ID = 'operation'
 VUE_APP_AUTH_CLIENT_SECRET = 'operation'
 ## 加密私有 key
 VUE_APP_AUTH_ENCRYPTION_KEY = 'sksksksksksksksk'
-## Auth API
-VUE_APP_AUTH_API = 'https://devauth.imedcloud.jk.com/'
 
-## WS API
-VUE_APP_WS_API = 'https://devauth.imedcloud.jk.com/'
+
+# RELEASE CONFIG
+## Nginx 虚拟路径
+VUE_APP_RELEASE_FLODER_PATH = '/'
+
+
+## API CONFIG
+## API Mock
+VUE_APP_MOCK_API = 'https://devyapi.holoalpha.com/mock/47/'
+## API BASE
+VUE_APP_BASE_API = 'https://devservice.imedcloud.jk.com/'
+## API Auth
+VUE_APP_AUTH_API = 'https://devauth.imedcloud.jk.com/'
+## API WebSocket
+VUE_APP_WEBSOCKET_API = 'https://devauth.imedcloud.jk.com/'
+
+
+# SITE CONFIG
+## 处方运营端系统地址
+VUE_APP_OPERATION_SITE = 'https://devduroc.imedcloud.jk.com/'
+## 互医运营端系统地址
+VUE_APP_NETHOSPITAL = 'https://devapi.holoalpha.com/backend/#'
+## 互医机构端端系统地址
+VUE_APP_NETHOSPITAL_ORG = 'https://devapi.holoalpha.com/mechanism/#/'
 
