--- a/packages/repo-operation/.env.dev
+++ b/packages/repo-operation/.env.dev
@@ -6,17 +6,22 @@
 ## 编译模式
 NODE_ENV = 'production'
 
+
 ## Nginx 虚拟路径
 VUE_APP_RELEASE_FLODER_PATH = '/web/'
 
-## Server API
-VUE_APP_BASE_API = 'https://devoperate.holoalpha.com/'
 
+## API CONFIG
+## API BASE
+VUE_APP_BASE_API = 'https://devoperate.holoalpha.com/'
+## API Auth
+VUE_APP_AUTH_API = 'https://devauth.imedcloud.jk.com/'
+
+
+# SITE CONFIG
 ## 处方运营端系统地址
 VUE_APP_OPERATION_SITE = 'https://devduroc.imedcloud.jk.com/'
-
 ## 互医运营端系统地址
 VUE_APP_NETHOSPITAL = 'https://devapi.holoalpha.com/backend/#'
-
 ## 互医机构端端系统地址
 VUE_APP_NETHOSPITAL_ORG = 'https://devapi.holoalpha.com/mechanism/#/'
