--- a/packages/repo-operation/.env.pre
+++ b/packages/repo-operation/.env.pre
@@ -6,14 +6,18 @@
 ## 编译模式
 NODE_ENV = 'production'
 
+
+## API CONFIG
 ## Server API
 VUE_APP_BASE_API = 'https://preoperate.holoalpha.com/'
+## API Auth
+VUE_APP_AUTH_API = 'https://preauth.imedcloud.jk.com/'
 
+
+# SITE CONFIG
 ## 处方运营端系统地址
 VUE_APP_OPERATION_SITE = 'https://preduroc.imedcloud.jk.com/'
-
 ## 互医运营端系统地址
 VUE_APP_NETHOSPITAL = 'https://preapi.holoalpha.com/backend/#'
-
 ## 互医机构端端系统地址
 VUE_APP_NETHOSPITAL_ORG = 'https://preapi.holoalpha.com/mechanism/#/'
