--- a/packages/repo-operation/.env.prod
+++ b/packages/repo-operation/.env.prod
@@ -6,14 +6,18 @@
 ## 编译模式
 NODE_ENV = 'production'
 
+
+## API CONFIG
 ## Server API
 VUE_APP_BASE_API = 'https://operate.holoalpha.com/'
+## API Auth
+VUE_APP_AUTH_API = 'https://auth.imedcloud.jk.com/'
 
+
+## SITE CONFIG
 ## 处方运营端系统地址
 VUE_APP_OPERATION_SITE = 'https://duroc.imedcloud.jk.com/'
-
 ## 互医运营端系统地址
 VUE_APP_NETHOSPITAL = 'https://api.holoalpha.com/backend/#'
-
 ## 互医机构端端系统地址
 VUE_APP_NETHOSPITAL_ORG = 'https://api.holoalpha.com/mechanism/#/'
