--- a/packages/repo-operation/.env.test
+++ b/packages/repo-operation/.env.test
@@ -6,17 +6,22 @@
 ## 编译模式
 NODE_ENV = 'production'
 
+
 ## Nginx 虚拟路径
 VUE_APP_RELEASE_FLODER_PATH = '/web/'
 
+
+## API CONFIG
 ## Server API
 VUE_APP_BASE_API = 'https://testoperate.holoalpha.com/'
+## API Auth
+VUE_APP_AUTH_API = 'https://testauth.imedcloud.jk.com/'
 
+
+## SITE CONFIG
 ## 处方运营端系统地址
 VUE_APP_OPERATION_SITE = 'https://testduroc.imedcloud.jk.com/'
-
 ## 互医运营端系统地址
 VUE_APP_NETHOSPITAL = 'https://testapi.holoalpha.com/backend/#'
-
 ## 互医机构端端系统地址
 VUE_APP_NETHOSPITAL_ORG = 'https://testapi.holoalpha.com/mechanism/#/'
