--- a/packages/repo-organization/.env.dev
+++ b/packages/repo-organization/.env.dev
@@ -6,27 +6,28 @@
 ## 编译模式
 NODE_ENV = 'production'
 
+
 ## Nginx 虚拟路径
 VUE_APP_RELEASE_FLODER_PATH = '/web/'
 
-## 官网地址
-VUE_APP_WEB_SITE = 'http://devweb.holoalpha.com/web/'
-
-## 处方共享管理、合理用药管理、药品供应管理 地址
-VUE_APP_PRESCRIPTION_SITE = 'https://devdurhome.imedcloud.jk.com/'
-
-## 互联网医院 地址
-VUE_APP_ORGANIZATION_SITE='https://devapi.holoalpha.com/mechanism/#/'
 
 ## API 路径
-## Server API
+## 控制台 API
 VUE_APP_BASE_API = 'https://devconsole.holoalpha.com/'
-
-## Auth API
+## 集中权限认证 Auth API
 VUE_APP_AUTH_API = 'https://devauth.imedcloud.jk.com/'
+## 麦迪森 MDS API
+VUE_APP_BASE_API = 'https://devservice.imedcloud.jk.com/'
+## 处方管理 PSD API
+VUE_APP_BASE_API = 'https://devdurpsd.imedcloud.jk.com/'
 
-## MDS API
-VUE_APP_MDS_API = 'https://devservice.imedcloud.jk.com/'
 
-## PSD API
-VUE_APP_PSD_API = 'https://devdurpsd.imedcloud.jk.com/'
+## 站点地址
+## 官网地址
+VUE_APP_WEB_SITE = 'http://devweb.holoalpha.com/web/'
+## 官网登录页路由
+VUE_APP_WEB_SITE_LOGIN = 'login'
+## 处方共享管理、合理用药管理、药品供应管理地址
+VUE_APP_PRESCRIPTION_SITE = 'https://devdurhome.imedcloud.jk.com/'
+## 互联网医院地址
+VUE_APP_ORGANIZATION_SITE='https://devapi.holoalpha.com/mechanism/#/'
