--- a/packages/repo-organization/.env
+++ b/packages/repo-organization/.env
@@ -5,40 +5,26 @@
 ## 编译模式
 NODE_ENV = 'development'
 
+
 ## Nginx 虚拟路径
 VUE_APP_RELEASE_FLODER_PATH = '/'
 
-## 终端信息
-VUE_APP_CLIENT_ID = 'console'
-VUE_APP_CLIENT_SECRET = 'console'
-
-## 官网地址
-VUE_APP_WEB_SITE = 'http://localhost:8080/'
-##官网登录页路由
-VUE_APP_WEB_SITE_LOGIN='login'
-
-## 处方共享管理、合理用药管理、药品供应管理 地址
-VUE_APP_PRESCRIPTION_SITE = 'https://devdurhome.imedcloud.jk.com/'
-
-## 互联网医院 地址
-VUE_APP_ORGANIZATION_SITE='http://localhost:8013/#/'
-
 
 ## API 路径
-## Mock API 
+## API Mock
 VUE_APP_MOCK_API = 'https://testyapi.holoalpha.com/mock/43/'
-
-## Server API
-VUE_APP_BASE_API = 'https://devconsole.holoalpha.com/'
-
-## Auth API
+## API BASE
+VUE_APP_BASE_API = 'https://devservice.imedcloud.jk.com/'
+## API Auth
 VUE_APP_AUTH_API = 'https://devauth.imedcloud.jk.com/'
 
-## MDS API
-VUE_APP_MDS_API = 'https://devservice.imedcloud.jk.com/'
 
-## MDS API
-VUE_APP_MDS_API = 'https://devservice.imedcloud.jk.com/'
-
-## PSD API
-VUE_APP_PSD_API = 'https://devdurpsd.imedcloud.jk.com/'
+## 站点地址 
+## 官网地址
+VUE_APP_WEB_SITE = 'http://localhost:8080/'
+## 官网登录页路由
+VUE_APP_WEB_SITE_LOGIN = 'login'
+## 处方共享管理、合理用药管理、药品供应管理地址
+VUE_APP_PRESCRIPTION_SITE = 'https://devdurhome.imedcloud.jk.com/'
+## 互联网医院地址
+VUE_APP_ORGANIZATION_SITE='http://localhost:8013/#/'
