--- a/packages/repo-organization/.env.pre
+++ b/packages/repo-organization/.env.pre
@@ -6,21 +6,24 @@
 ## 编译模式
 NODE_ENV = 'production'
 
+
+## API CONFIG
+## API BASE
+VUE_APP_BASE_API = 'https://preconsole.holoalpha.com/'
+## API Auth
+VUE_APP_AUTH_API = 'https://preauth.imedcloud.jk.com/'
+## 麦迪森 MDS API
+VUE_APP_BASE_API = 'https://preservice.imedcloud.jk.com/'
+## 处方管理 PSD API
+VUE_APP_BASE_API = 'https://predurpsd.imedcloud.jk.com/'
+
+
+## 站点地址
 ## 官网地址
 VUE_APP_WEB_SITE = 'https://preweb.imedcloud.jk.com/'
-
-## 处方共享管理、合理用药管理、药品供应管理 地址
+## 官网登录页路由
+VUE_APP_WEB_SITE_LOGIN = 'login'
+## 处方共享管理、合理用药管理、药品供应管理
 VUE_APP_PRESCRIPTION_SITE = 'https://predurhome.imedcloud.jk.com/'
-
-## 互联网医院 地址
+## 互联网医院
 VUE_APP_ORGANIZATION_SITE='https://preapi.holoalpha.com/mechanism/#/'
-
-## API 路径
-## Server API
-VUE_APP_BASE_API = 'https://preconsole.holoalpha.com/'
-
-## Auth API
-VUE_APP_AUTH_API = 'https://preauth.imedcloud.jk.com/'
-
-## MDS API
-VUE_APP_MDS_API = 'https://preservice.imedcloud.jk.com/'
