--- a/packages/repo-organization/.env.prod
+++ b/packages/repo-organization/.env.prod
@@ -6,21 +6,22 @@
 ## 编译模式
 NODE_ENV = 'production'
 
+
+## 站点地址
 ## 官网地址
 VUE_APP_WEB_SITE = 'https://web.imedcloud.jk.com/'
-
+## 官网登录页路由
+VUE_APP_WEB_SITE_LOGIN = 'login'
 ## 处方共享管理、合理用药管理、药品供应管理 地址
 VUE_APP_PRESCRIPTION_SITE = 'https://durhome.imedcloud.jk.com/'
-
 ## 互联网医院 地址
 VUE_APP_ORGANIZATION_SITE='https://api.holoalpha.com/mechanism/#/'
 
+
 ## API 路径
-## Server API
+## 控制台 API
 VUE_APP_BASE_API = 'https://console.holoalpha.com/'
-
-## Auth API
+## 集中权限认证 Auth API
 VUE_APP_AUTH_API = 'https://auth.imedcloud.jk.com/'
-
-## MDS API
-VUE_APP_MDS_API = 'https://service.imedcloud.jk.com/'
+## 麦迪森 MDS API
+VUE_APP_BASE_API = 'https://service.imedcloud.jk.com/'
