--- a/packages/repo-organization/.env.test
+++ b/packages/repo-organization/.env.test
@@ -6,25 +6,28 @@
 ## 编译模式
 NODE_ENV = 'production'
 
+
 ## Nginx 虚拟路径
 VUE_APP_RELEASE_FLODER_PATH = '/web/'
 
 
+## 站点地址
 ## 官网地址
 VUE_APP_WEB_SITE = 'https://testweb.holoalpha.com/web/'
-
-## 处方共享管理、合理用药管理、药品供应管理 地址
+## 官网登录页路由
+VUE_APP_WEB_SITE_LOGIN = 'login'
+## 处方共享管理、合理用药管理、药品供应管理地址
 VUE_APP_PRESCRIPTION_SITE = 'https://testdurhome.imedcloud.jk.com/'
+## 互联网医院地址
+VUE_APP_ORGANIZATION_SITE = 'https://testapi.holoalpha.com/mechanism/#/'
 
-## 互联网医院 地址
-VUE_APP_ORGANIZATION_SITE='https://testapi.holoalpha.com/mechanism/#/'
 
 ## API 路径
-## Server API
+## 控制台 API
 VUE_APP_BASE_API = 'https://testconsole.holoalpha.com/'
-
-## Auth API
+## 集中权限认证 Auth API
 VUE_APP_AUTH_API = 'https://testauth.imedcloud.jk.com/'
-
-## MDS API
-VUE_APP_MDS_API = 'https://testservice.imedcloud.jk.com/'
+## 麦迪森 MDS API
+VUE_APP_BASE_API = 'https://testservice.imedcloud.jk.com/'
+## 处方管理 PSD API
+VUE_APP_BASE_API = 'https://testdurpsd.imedcloud.jk.com/'
