Update ENV  VUE_APP_BASE_API

--- a/packages/repo-operation/.env.dev
+++ b/packages/repo-operation/.env.dev
@@ -13,7 +13,7 @@ VUE_APP_RELEASE_FLODER_PATH = '/web/'
 
 ## API CONFIG
 ## API BASE
-VUE_APP_BASE_API = 'https://devoperate.holoalpha.com/'
+VUE_APP_BASE_API = 'https://devservice.imedcloud.jk.com/'
 ## API Auth
 VUE_APP_AUTH_API = 'https://devauth.imedcloud.jk.com/'
 
