--- a/packages/repo-operation/.env.test
+++ b/packages/repo-operation/.env.test
@@ -13,7 +13,7 @@ VUE_APP_RELEASE_FLODER_PATH = '/web/'
 
 ## API CONFIG
 ## Server API
-VUE_APP_BASE_API = 'https://testoperate.holoalpha.com/'
+VUE_APP_BASE_API = 'https://testservice.imedcloud.jk.com/'
 ## API Auth
 VUE_APP_AUTH_API = 'https://testauth.imedcloud.jk.com/'
 
