--- a/packages/repo-operation/.env.pre
+++ b/packages/repo-operation/.env.pre
@@ -9,7 +9,7 @@ NODE_ENV = 'production'
 
 ## API CONFIG
 ## Server API
-VUE_APP_BASE_API = 'https://preoperate.holoalpha.com/'
+VUE_APP_BASE_API = 'https://preservice.imedcloud.jk.com/'
 ## API Auth
 VUE_APP_AUTH_API = 'https://preauth.imedcloud.jk.com/'
 
