--- a/packages/repo-operation/.env.prod
+++ b/packages/repo-operation/.env.prod
@@ -9,7 +9,7 @@ NODE_ENV = 'production'
 
 ## API CONFIG
 ## Server API
-VUE_APP_BASE_API = 'https://operate.holoalpha.com/'
+VUE_APP_BASE_API = 'https://service.imedcloud.jk.com/'
 ## API Auth
 VUE_APP_AUTH_API = 'https://auth.imedcloud.jk.com/'
 
