--- a/packages/repo-organization/.env
+++ b/packages/repo-organization/.env
@@ -10,21 +10,23 @@ NODE_ENV = 'development'
 VUE_APP_RELEASE_FLODER_PATH = '/'
 
 
-## API 路径
+## API 地址
 ## API Mock
-VUE_APP_MOCK_API = 'https://testyapi.holoalpha.com/mock/43/'
-## API BASE
-VUE_APP_BASE_API = 'https://devservice.imedcloud.jk.com/'
+VUE_APP_API_MOCK = 'https://devyapi.holoalpha.com/mock/43/'
+## API Base
+VUE_APP_API_BASE = 'https://devservice.imedcloud.jk.com/'
 ## API Auth
-VUE_APP_AUTH_API = 'https://devauth.imedcloud.jk.com/'
+VUE_APP_API_AUTH = 'https://devauth.imedcloud.jk.com/'
+## API WebSocket
+VUE_APP_API_WEBSOCKET = 'ws://114.115.150.24:9999/admin/websocket'
 
 
 ## 站点地址 
 ## 官网地址
-VUE_APP_WEB_SITE = 'http://localhost:8080/'
-## 官网登录页路由
-VUE_APP_WEB_SITE_LOGIN = 'login'
+VUE_APP_SITE_OFFCIAL = 'http://localhost:8080/'
+## 官网地址 - 登录页路由
+VUE_APP_SITE_OFFCIAL_LOGIN = 'login'
 ## 处方共享管理、合理用药管理、药品供应管理地址
-VUE_APP_PRESCRIPTION_SITE = 'https://devdurhome.imedcloud.jk.com/'
+VUE_APP_SITE_PRESCRIPTION = 'https://devdurhome.imedcloud.jk.com/'
 ## 互联网医院地址
-VUE_APP_ORGANIZATION_SITE='http://localhost:8013/#/'
+VUE_APP_SITE_ORGANIZATION = 'http://localhost:8013/#/'
