--- a/packages/repo-organization/.env.pre
+++ b/packages/repo-organization/.env.pre
@@ -7,23 +7,25 @@
 NODE_ENV = 'production'
 
 
-## API CONFIG
-## API BASE
-VUE_APP_BASE_API = 'https://preconsole.holoalpha.com/'
+## Nginx 虚拟路径
+VUE_APP_RELEASE_FLODER_PATH = '/'
+
+
+## API 地址
+## API Base
+VUE_APP_API_BASE = 'https://preservice.imedcloud.jk.com/'
 ## API Auth
-VUE_APP_AUTH_API = 'https://preauth.imedcloud.jk.com/'
-## 麦迪森 MDS API
-VUE_APP_BASE_API = 'https://preservice.imedcloud.jk.com/'
-## 处方管理 PSD API
-VUE_APP_BASE_API = 'https://predurpsd.imedcloud.jk.com/'
+VUE_APP_API_AUTH = 'https://preauth.imedcloud.jk.com/'
+## API WebSocket
+VUE_APP_API_WEBSOCKET = 'ws://114.115.150.24:9999/admin/websocket'
 
 
 ## 站点地址
 ## 官网地址
-VUE_APP_WEB_SITE = 'https://preweb.imedcloud.jk.com/'
-## 官网登录页路由
-VUE_APP_WEB_SITE_LOGIN = 'login'
-## 处方共享管理、合理用药管理、药品供应管理
-VUE_APP_PRESCRIPTION_SITE = 'https://predurhome.imedcloud.jk.com/'
-## 互联网医院
-VUE_APP_ORGANIZATION_SITE='https://preapi.holoalpha.com/mechanism/#/'
+VUE_APP_SITE_OFFCIAL = 'https://preweb.imedcloud.jk.com/'
+## 官网地址 - 登录页路由
+VUE_APP_SITE_OFFCIAL_LOGIN = 'login'
+## 处方共享管理、合理用药管理、药品供应管理地址
+VUE_APP_SITE_PRESCRIPTION = 'https://predurhome.imedcloud.jk.com/'
+## 互联网医院地址
+VUE_APP_SITE_ORGANIZATION = 'https://preapi.holoalpha.com/mechanism/#/'
