--- a/packages/repo-organization/.env.prod
+++ b/packages/repo-organization/.env.prod
@@ -7,21 +7,25 @@
 NODE_ENV = 'production'
 
 
+## Nginx 虚拟路径
+VUE_APP_RELEASE_FLODER_PATH = '/'
+
+
+## API 地址
+## API Base
+VUE_APP_API_BASE = 'https://service.imedcloud.jk.com/'
+## API Auth
+VUE_APP_API_AUTH = 'https://auth.imedcloud.jk.com/'
+## API WebSocket
+VUE_APP_API_WEBSOCKET = 'ws://114.115.150.24:9999/admin/websocket'
+
+
 ## 站点地址
 ## 官网地址
-VUE_APP_WEB_SITE = 'https://web.imedcloud.jk.com/'
-## 官网登录页路由
-VUE_APP_WEB_SITE_LOGIN = 'login'
-## 处方共享管理、合理用药管理、药品供应管理 地址
-VUE_APP_PRESCRIPTION_SITE = 'https://durhome.imedcloud.jk.com/'
-## 互联网医院 地址
-VUE_APP_ORGANIZATION_SITE='https://api.holoalpha.com/mechanism/#/'
-
-
-## API 路径
-## 控制台 API
-VUE_APP_BASE_API = 'https://console.holoalpha.com/'
-## 集中权限认证 Auth API
-VUE_APP_AUTH_API = 'https://auth.imedcloud.jk.com/'
-## 麦迪森 MDS API
-VUE_APP_BASE_API = 'https://service.imedcloud.jk.com/'
+VUE_APP_SITE_OFFCIAL = 'https://web.imedcloud.jk.com/'
+## 官网地址 - 登录页路由
+VUE_APP_SITE_OFFCIAL_LOGIN = 'login'
+## 处方共享管理、合理用药管理、药品供应管理地址
+VUE_APP_SITE_PRESCRIPTION = 'https://durhome.imedcloud.jk.com/'
+## 互联网医院地址
+VUE_APP_SITE_ORGANIZATION = 'https://api.holoalpha.com/mechanism/#/'
