--- a/packages/repo-organization/.env.test
+++ b/packages/repo-organization/.env.test
@@ -11,23 +11,21 @@ NODE_ENV = 'production'
 VUE_APP_RELEASE_FLODER_PATH = '/web/'
 
 
+## API 地址
+## API Base
+VUE_APP_API_BASE = 'https://testservice.imedcloud.jk.com/'
+## API Auth
+VUE_APP_API_AUTH = 'https://testauth.imedcloud.jk.com/'
+## API WebSocket
+VUE_APP_API_WEBSOCKET = 'ws://114.115.150.24:9999/admin/websocket'
+
+
 ## 站点地址
 ## 官网地址
-VUE_APP_WEB_SITE = 'https://testweb.holoalpha.com/web/'
-## 官网登录页路由
-VUE_APP_WEB_SITE_LOGIN = 'login'
+VUE_APP_SITE_OFFCIAL = 'https://testweb.holoalpha.com/web/'
+## 官网地址 - 登录页路由
+VUE_APP_SITE_OFFCIAL_LOGIN = 'login'
 ## 处方共享管理、合理用药管理、药品供应管理地址
-VUE_APP_PRESCRIPTION_SITE = 'https://testdurhome.imedcloud.jk.com/'
+VUE_APP_SITE_PRESCRIPTION = 'https://testdurhome.imedcloud.jk.com/'
 ## 互联网医院地址
-VUE_APP_ORGANIZATION_SITE = 'https://testapi.holoalpha.com/mechanism/#/'
-
-
-## API 路径
-## 控制台 API
-VUE_APP_BASE_API = 'https://testconsole.holoalpha.com/'
-## 集中权限认证 Auth API
-VUE_APP_AUTH_API = 'https://testauth.imedcloud.jk.com/'
-## 麦迪森 MDS API
-VUE_APP_BASE_API = 'https://testservice.imedcloud.jk.com/'
-## 处方管理 PSD API
-VUE_APP_BASE_API = 'https://testdurpsd.imedcloud.jk.com/'
+VUE_APP_SITE_ORGANIZATION = 'https://testapi.holoalpha.com/mechanism/#/'
