1, Upgrade identity 2, Support socket 3, Change env

--- a/packages/repo-website/.env.pre
+++ b/packages/repo-website/.env.pre
@@ -6,15 +6,24 @@
 ## 编译模式
 NODE_ENV = 'production'
 
-## 控制台路径
-VUE_APP_CONSOLE_SITE = 'https://preconsole.imedcloud.jk.com/'
-## 医生登录入口路径
-VUE_APP_DOCTOR_WORKBENCH_SITE = 'https://predoctor.imedcloud.jk.com/doctorpc/#/login'
-## 药师登录入口路径
-VUE_APP_PHARMACIST_WORKBENCH_SITE = 'https://prepharmacistweb.imedcloud.jk.com/'
 
-## Server API
-VUE_APP_BASE_API = 'https://preweb.holoalpha.com/'
+## Nginx 虚拟路径
+VUE_APP_RELEASE_FLODER_PATH = '/'
 
-## Auth API
-VUE_APP_AUTH_API = 'https://preauth.imedcloud.jk.com/'
+
+## API 地址
+## API Base
+VUE_APP_API_BASE = 'https://preweb.holoalpha.com/'
+## API Auth
+VUE_APP_API_AUTH = 'https://preauth.imedcloud.jk.com/'
+## API WebSocket
+VUE_APP_API_WEBSOCKET = 'ws://114.115.150.24:9999/admin/websocket'
+
+
+## 站点地址 
+## 控制台地址
+VUE_APP_SITE_CONSOLE = 'https://preconsole.imedcloud.jk.com/'
+## 医生登录入口地址
+VUE_APP_SITE_DOCTOR_WORKBENCH = 'https://predoctor.imedcloud.jk.com/doctorpc/#/login'
+## 药师登录入口地址
+VUE_APP_SITE_PHARMACIST_WORKBENCH = 'https://prepharmacistweb.imedcloud.jk.com/'
