--- a/packages/repo-website/.env
+++ b/packages/repo-website/.env
@@ -5,26 +5,32 @@
 ## 编译模式
 NODE_ENV = 'development'
 
+
 ## Nginx 虚拟路径
 VUE_APP_RELEASE_FLODER_PATH = '/'
 
-## 终端信息
-VUE_APP_CLIENT_ID = 'console'
-VUE_APP_CLIENT_SECRET = 'console'
 
-## 控制台路径
-VUE_APP_CONSOLE_SITE = 'http://localhost:8081/'
-## 医生登录入口路径
-VUE_APP_DOCTOR_WORKBENCH_SITE = 'https://devdoctor.imedcloud.jk.com/doctorpc/#/login'
-## 药师登录入口路径
-VUE_APP_PHARMACIST_WORKBENCH_SITE = 'https://devpharmacistweb.imedcloud.jk.com/'
+# AUTH CONFIG
+VUE_APP_AUTH_CLIENT_ID = 'console'
+VUE_APP_AUTH_CLIENT_SECRET = 'console'
+VUE_APP_AUTH_ENCRYPTION_KEY = 'sksksksksksksksk'
 
-## API 路径
-## Mock API 
-VUE_APP_MOCK_API = 'https://devyapi.holoalpha.com/mock/51/'
-## Server API
-VUE_APP_BASE_API = 'https://devweb.holoalpha.com/'
 
-## Auth API
-VUE_APP_AUTH_API = 'https://devauth.imedcloud.jk.com/'
+## API 地址
+## API Mock  
+VUE_APP_API_MOCK = 'https://devyapi.holoalpha.com/mock/51/'
+## API Server 
+VUE_APP_API_BASE = 'https://devweb.holoalpha.com/'
+## API Auth 
+VUE_APP_API_AUTH = 'https://devauth.imedcloud.jk.com/'
+## API WebSocket
+VUE_APP_API_WEBSOCKET = 'ws://114.115.150.24:9999/admin/websocket'
 
+
+## 站点地址 
+## 控制台地址 
+VUE_APP_SITE_CONSOLE = 'http://localhost:8081/'
+## 医生登录入口地址 
+VUE_APP_SITE_DOCTOR_WORKBENCH = 'https://devdoctor.imedcloud.jk.com/doctorpc/#/login'
+## 药师登录入口地址 
+VUE_APP_SITE_PHARMACIST_WORKBENCH = 'https://devpharmacistweb.imedcloud.jk.com/'
