--- a/packages/repo-website/.env.dev
+++ b/packages/repo-website/.env.dev
@@ -6,18 +6,24 @@
 ## 编译模式
 NODE_ENV = 'production'
 
+
 ## Nginx 虚拟路径
 VUE_APP_RELEASE_FLODER_PATH = '/web/'
 
-## 控制台路径
-VUE_APP_CONSOLE_SITE = 'https://devconsole.holoalpha.com/web/'
-## 医生登录入口路径
-VUE_APP_DOCTOR_WORKBENCH_SITE = 'https://devdoctor.imedcloud.jk.com/doctorpc/#/login'
-## 药师登录入口路径
-VUE_APP_PHARMACIST_WORKBENCH_SITE = 'https://devpharmacistweb.imedcloud.jk.com/'
 
-## Server API
-VUE_APP_BASE_API = 'https://devweb.holoalpha.com/'
+## API 地址
+## API Base
+VUE_APP_API_BASE = 'https://devweb.holoalpha.com/'
+## API Auth
+VUE_APP_API_AUTH = 'https://devauth.imedcloud.jk.com/'
+## API WebSocket
+VUE_APP_API_WEBSOCKET = 'ws://114.115.150.24:9999/admin/websocket'
 
-## Auth API
-VUE_APP_AUTH_API = 'https://devauth.imedcloud.jk.com/'
+
+## 站点地址 
+## 控制台地址 
+VUE_APP_SITE_CONSOLE = 'https://devconsole.holoalpha.com/web/'
+## 医生登录入口地址 
+VUE_APP_SITE_DOCTOR_WORKBENCH = 'https://devdoctor.imedcloud.jk.com/doctorpc/#/login'
+## 药师登录入口地址 
+VUE_APP_SITE_PHARMACIST_WORKBENCH = 'https://devpharmacistweb.imedcloud.jk.com/'
