--- a/packages/repo-website/.env.prod
+++ b/packages/repo-website/.env.prod
@@ -7,15 +7,23 @@
 NODE_ENV = 'production'
 
 
-## 控制台路径
-VUE_APP_CONSOLE_SITE = 'https://console.imedcloud.jk.com/'
-## 医生登录入口路径
-VUE_APP_DOCTOR_WORKBENCH_SITE = 'https://doctor.imedcloud.jk.com/doctorpc/#/login'
-## 药师登录入口路径
-VUE_APP_PHARMACIST_WORKBENCH_SITE = 'https://prodpharmacistweb.imedcloud.jk.com/'
+## Nginx 虚拟路径
+VUE_APP_RELEASE_FLODER_PATH = '/'
 
-## Server API
-VUE_APP_BASE_API = 'https://web.holoalpha.com/'
 
-## Auth API
-VUE_APP_AUTH_API = 'https://auth.imedcloud.jk.com/'
+## API 地址
+## API Base
+VUE_APP_API_BASE = 'https://web.holoalpha.com/'
+## API Auth
+VUE_APP_API_AUTH = 'https://auth.imedcloud.jk.com/'
+## API WebSocket
+VUE_APP_API_WEBSOCKET = 'ws://114.115.150.24:9999/admin/websocket'
+
+
+## 站点地址 
+## 控制台地址
+VUE_APP_SITE_CONSOLE = 'https://console.imedcloud.jk.com/'
+## 医生登录入口地址
+VUE_APP_SITE_DOCTOR_WORKBENCH = 'https://doctor.imedcloud.jk.com/doctorpc/#/login'
+## 药师登录入口地址
+VUE_APP_SITE_PHARMACIST_WORKBENCH = 'https://pharmacistweb.imedcloud.jk.com/'
