--- a/packages/repo-operation/.env
+++ b/packages/repo-operation/.env
@@ -6,36 +6,29 @@
 NODE_ENV = 'development'
 
 
-# AUTH CONFIG
-## CLIENT_ID
-VUE_APP_AUTH_CLIENT_ID = 'operation'
-## CLIENT_SECRET
-VUE_APP_AUTH_CLIENT_SECRET = 'operation'
-## 加密私有 key
-VUE_APP_AUTH_ENCRYPTION_KEY = 'sksksksksksksksk'
-
-
-# RELEASE CONFIG
 ## Nginx 虚拟路径
 VUE_APP_RELEASE_FLODER_PATH = '/'
 
 
-## API CONFIG
+# AUTH CONFIG
+VUE_APP_AUTH_CLIENT_ID = 'operation'
+VUE_APP_AUTH_CLIENT_SECRET = 'operation'
+VUE_APP_AUTH_ENCRYPTION_KEY = 'sksksksksksksksk'
+
+
+## API 地址
 ## API Mock
-VUE_APP_MOCK_API = 'https://devyapi.holoalpha.com/mock/47/'
-## API BASE
-VUE_APP_BASE_API = 'https://devservice.imedcloud.jk.com/'
+VUE_APP_API_MOCK = 'https://devyapi.holoalpha.com/mock/47/'
+## API Base
+VUE_APP_API_BASE = 'https://devservice.imedcloud.jk.com/'
 ## API Auth
-VUE_APP_AUTH_API = 'https://devauth.imedcloud.jk.com/'
+VUE_APP_API_AUTH = 'https://devauth.imedcloud.jk.com/'
 ## API WebSocket
 VUE_APP_WEBSOCKET_API = 'https://devauth.imedcloud.jk.com/'
 
 
-# SITE CONFIG
+## 站点地址 
 ## 处方运营端系统地址
-VUE_APP_OPERATION_SITE = 'https://devduroc.imedcloud.jk.com/'
+VUE_APP_SITE_OPERATION = 'https://devduroc.imedcloud.jk.com/'
 ## 互医运营端系统地址
-VUE_APP_NETHOSPITAL = 'https://devapi.holoalpha.com/backend/#'
-## 互医机构端端系统地址
-VUE_APP_NETHOSPITAL_ORG = 'https://devapi.holoalpha.com/mechanism/#/'
-
+VUE_APP_SITE_NETHOSPITAL = 'https://devapi.holoalpha.com/backend/#'
