--- a/packages/repo-operation/.env.dev
+++ b/packages/repo-operation/.env.dev
@@ -15,13 +15,11 @@ VUE_APP_RELEASE_FLODER_PATH = '/web/'
 ## API BASE
 VUE_APP_BASE_API = 'https://devservice.imedcloud.jk.com/'
 ## API Auth
-VUE_APP_AUTH_API = 'https://devauth.imedcloud.jk.com/'
+VUE_APP_API_AUTH = 'https://devauth.imedcloud.jk.com/'
 
 
-# SITE CONFIG
+## 站点地址 
 ## 处方运营端系统地址
-VUE_APP_OPERATION_SITE = 'https://devduroc.imedcloud.jk.com/'
+VUE_APP_SITE_OPERATION = 'https://devduroc.imedcloud.jk.com/'
 ## 互医运营端系统地址
-VUE_APP_NETHOSPITAL = 'https://devapi.holoalpha.com/backend/#'
-## 互医机构端端系统地址
-VUE_APP_NETHOSPITAL_ORG = 'https://devapi.holoalpha.com/mechanism/#/'
+VUE_APP_SITE_NETHOSPITAL = 'https://devapi.holoalpha.com/backend/#'
