--- a/packages/repo-operation/.env.prod
+++ b/packages/repo-operation/.env.prod
@@ -11,13 +11,11 @@ NODE_ENV = 'production'
 ## Server API
 VUE_APP_BASE_API = 'https://service.imedcloud.jk.com/'
 ## API Auth
-VUE_APP_AUTH_API = 'https://auth.imedcloud.jk.com/'
+VUE_APP_API_AUTH = 'https://auth.imedcloud.jk.com/'
 
 
 ## SITE CONFIG
 ## 处方运营端系统地址
-VUE_APP_OPERATION_SITE = 'https://duroc.imedcloud.jk.com/'
+VUE_APP_SITE_OPERATION = 'https://duroc.imedcloud.jk.com/'
 ## 互医运营端系统地址
-VUE_APP_NETHOSPITAL = 'https://api.holoalpha.com/backend/#'
-## 互医机构端端系统地址
-VUE_APP_NETHOSPITAL_ORG = 'https://api.holoalpha.com/mechanism/#/'
+VUE_APP_SITE_NETHOSPITAL = 'https://api.holoalpha.com/backend/#'
