--- a/packages/repo-operation/.env.test
+++ b/packages/repo-operation/.env.test
@@ -15,13 +15,11 @@ VUE_APP_RELEASE_FLODER_PATH = '/web/'
 ## Server API
 VUE_APP_BASE_API = 'https://testservice.imedcloud.jk.com/'
 ## API Auth
-VUE_APP_AUTH_API = 'https://testauth.imedcloud.jk.com/'
+VUE_APP_API_AUTH = 'https://testauth.imedcloud.jk.com/'
 
 
 ## SITE CONFIG
 ## 处方运营端系统地址
-VUE_APP_OPERATION_SITE = 'https://testduroc.imedcloud.jk.com/'
+VUE_APP_SITE_OPERATION = 'https://testduroc.imedcloud.jk.com/'
 ## 互医运营端系统地址
-VUE_APP_NETHOSPITAL = 'https://testapi.holoalpha.com/backend/#'
-## 互医机构端端系统地址
-VUE_APP_NETHOSPITAL_ORG = 'https://testapi.holoalpha.com/mechanism/#/'
+VUE_APP_SITE_NETHOSPITAL = 'https://testapi.holoalpha.com/backend/#'
