--- a/packages/repo-operation/.env
+++ b/packages/repo-operation/.env
@@ -10,12 +10,6 @@ NODE_ENV = 'development'
 VUE_APP_RELEASE_FLODER_PATH = '/'
 
 
-# AUTH CONFIG
-VUE_APP_AUTH_CLIENT_ID = 'operation'
-VUE_APP_AUTH_CLIENT_SECRET = 'operation'
-VUE_APP_AUTH_ENCRYPTION_KEY = 'sksksksksksksksk'
-
-
 ## API 地址
 ## API Mock
 VUE_APP_API_MOCK = 'https://devyapi.holoalpha.com/mock/47/'
@@ -24,7 +18,7 @@ VUE_APP_API_BASE = 'https://devservice.imedcloud.jk.com/'
 ## API Auth
 VUE_APP_API_AUTH = 'https://devauth.imedcloud.jk.com/'
 ## API WebSocket
-VUE_APP_WEBSOCKET_API = 'https://devauth.imedcloud.jk.com/'
+VUE_APP_API_WEBSOCKET = 'https://devauth.imedcloud.jk.com/'
 
 
 ## 站点地址 
