--- a/packages/repo-operation/.env
+++ b/packages/repo-operation/.env
@@ -9,6 +9,11 @@ NODE_ENV = 'development'
 ## Nginx 虚拟路径
 VUE_APP_RELEASE_FLODER_PATH = '/'
 
+# AUTH CONFIG
+VUE_APP_AUTH_CLIENT_ID = 'operation'
+VUE_APP_AUTH_CLIENT_SECRET = 'operation'
+VUE_APP_AUTH_ENCRYPTION_KEY = 'sksksksksksksksk'
+
 
 ## API 地址
 ## API Mock
@@ -25,4 +30,4 @@ VUE_APP_API_WEBSOCKET = 'https://devauth.imedcloud.jk.com/'
 ## 处方运营端系统地址
 VUE_APP_SITE_OPERATION = 'https://devduroc.imedcloud.jk.com/'
 ## 互医运营端系统地址
-VUE_APP_SITE_NETHOSPITAL = 'https://devapi.holoalpha.com/backend/#'
+VUE_APP_SITE_NETHOSPITAL = 'http://localhost:8081/#'
