支持 socket 消息，实现 onMessage

--- a/packages/repo-operation/.env
+++ b/packages/repo-operation/.env
@@ -23,11 +23,11 @@ VUE_APP_API_BASE = 'https://devservice.imedcloud.jk.com/'
 ## API Auth
 VUE_APP_API_AUTH = 'https://devauth.imedcloud.jk.com/'
 ## API WebSocket
-VUE_APP_API_WEBSOCKET = 'https://devauth.imedcloud.jk.com/'
+VUE_APP_API_WEBSOCKET = 'ws://114.115.150.24:9999/admin/websocket'
 
 
 ## 站点地址 
 ## 处方运营端系统地址
 VUE_APP_SITE_OPERATION = 'https://devduroc.imedcloud.jk.com/'
 ## 互医运营端系统地址
-VUE_APP_SITE_NETHOSPITAL = 'http://localhost:8081/#'
+VUE_APP_SITE_NETHOSPITAL = 'https://devapi.holoalpha.com/backend/#'
