--- a/packages/repo-operation/.env.dev
+++ b/packages/repo-operation/.env.dev
@@ -16,6 +16,8 @@ VUE_APP_RELEASE_FLODER_PATH = '/web/'
 VUE_APP_API_BASE = 'https://devservice.imedcloud.jk.com/'
 ## API Auth
 VUE_APP_API_AUTH = 'https://devauth.imedcloud.jk.com/'
+## API WebSocket
+VUE_APP_API_WEBSOCKET = 'ws://114.115.150.24:9999/admin/websocket'
 
 
 ## 站点地址 
