--- a/packages/repo-operation/.env.pre
+++ b/packages/repo-operation/.env.pre
@@ -12,6 +12,8 @@ NODE_ENV = 'production'
 VUE_APP_API_BASE = 'https://preservice.imedcloud.jk.com/'
 ## API Auth
 VUE_APP_API_AUTH = 'https://preauth.imedcloud.jk.com/'
+## API WebSocket
+VUE_APP_API_WEBSOCKET = 'ws://114.115.150.24:9999/admin/websocket'
 
 
 # SITE CONFIG
