--- a/packages/repo-pharmacist/.env
+++ b/packages/repo-pharmacist/.env
@@ -22,10 +22,14 @@ VUE_APP_RELEASE_FLODER_PATH = '/'
 VUE_APP_ROUTE_EXCEPTION_401 = '/401'
 
 # API CONFIG
-## API MOCK BASE
+## API MOCK
 VUE_APP_API_MOCK = 'https://yapi.imedcloud.jk.com/mock/25/'
 ## API BASE
 VUE_APP_API_BASE = 'https://devservice.imedcloud.jk.com/'
+## API Auth
+VUE_APP_API_AUTH = 'https://devauth.imedcloud.jk.com/'
+## API WebSocket
+VUE_APP_API_WEBSOCKET = 'ws://114.115.150.24:9999/admin/websocket'
 
 # SITE CONFIG
 ## SITE BASE 
