--- a/packages/repo-pharmacist/.env.pre
+++ b/packages/repo-pharmacist/.env.pre
@@ -7,10 +7,14 @@
 NODE_ENV = 'production'
 
 # API CONFIG
-## API MOCK BASE
+## API MOCK
 VUE_APP_API_MOCK = 'https://yapi.imedcloud.jk.com/mock/25/'
 ## API BASE
 VUE_APP_API_BASE = 'https://preservice.imedcloud.jk.com/'
+## API Auth
+VUE_APP_API_AUTH = 'https://preauth.imedcloud.jk.com/'
+## API WebSocket
+VUE_APP_API_WEBSOCKET = 'ws://114.115.150.24:9999/admin/websocket'
 
 # SITE CONFIG
 ## SITE BASE 
