--- a/packages/repo-website/.env
+++ b/packages/repo-website/.env
@@ -19,12 +19,12 @@ VUE_APP_AUTH_ENCRYPTION_KEY = 'sksksksksksksksk'
 ## API 地址
 ## API Mock  
 VUE_APP_API_MOCK = 'https://devyapi.holoalpha.com/mock/51/'
-## API Server 
+## API Base 
 VUE_APP_API_BASE = 'https://devweb.holoalpha.com/'
 ## API Auth 
 VUE_APP_API_AUTH = 'https://devauth.imedcloud.jk.com/'
 ## API WebSocket
-VUE_APP_API_WEBSOCKET = 'ws://114.115.150.24:9999/admin/websocket'
+VUE_APP_API_WEBSOCKET = 'wss://devservice.imedcloud.jk.com/admin/websocket'
 
 
 ## 站点地址 
