--- a/packages/repo-website/.env.pre
+++ b/packages/repo-website/.env.pre
@@ -17,7 +17,7 @@ VUE_APP_API_BASE = 'https://preweb.holoalpha.com/'
 ## API Auth
 VUE_APP_API_AUTH = 'https://preauth.imedcloud.jk.com/'
 ## API WebSocket
-VUE_APP_API_WEBSOCKET = 'ws://114.115.150.24:9999/admin/websocket'
+VUE_APP_API_WEBSOCKET = 'wss://preservice.imedcloud.jk.com/admin/websocket'
 
 
 ## 站点地址 
