--- a/packages/repo-website/.env.prod
+++ b/packages/repo-website/.env.prod
@@ -17,7 +17,7 @@ VUE_APP_API_BASE = 'https://web.holoalpha.com/'
 ## API Auth
 VUE_APP_API_AUTH = 'https://auth.imedcloud.jk.com/'
 ## API WebSocket
-VUE_APP_API_WEBSOCKET = 'ws://114.115.150.24:9999/admin/websocket'
+VUE_APP_API_WEBSOCKET = 'wss://service.imedcloud.jk.com/admin/websocket'
 
 
 ## 站点地址 
