--- a/packages/repo-organization/.env.dev
+++ b/packages/repo-organization/.env.dev
@@ -17,7 +17,7 @@ VUE_APP_API_BASE = 'https://devservice.imedcloud.jk.com/'
 ## API Auth
 VUE_APP_API_AUTH = 'https://devauth.imedcloud.jk.com/'
 ## API WebSocket
-VUE_APP_API_WEBSOCKET = 'ws://114.115.150.24:9999/admin/websocket'
+VUE_APP_API_WEBSOCKET = 'wss://devservice.imedcloud.jk.com/admin/websocket'
 
 
 ## 站点地址
