--- a/packages/repo-operation/.env.pre
+++ b/packages/repo-operation/.env.pre
@@ -7,16 +7,20 @@
 NODE_ENV = 'production'
 
 
-## API CONFIG
-## Server API
+## Nginx 虚拟路径
+VUE_APP_RELEASE_FLODER_PATH = '/'
+
+
+## API 地址
+## API Base
 VUE_APP_API_BASE = 'https://preservice.imedcloud.jk.com/'
 ## API Auth
 VUE_APP_API_AUTH = 'https://preauth.imedcloud.jk.com/'
 ## API WebSocket
-VUE_APP_API_WEBSOCKET = 'ws://114.115.150.24:9999/admin/websocket'
+VUE_APP_API_WEBSOCKET = 'wss://preservice.imedcloud.jk.com/admin/websocket'
 
 
-# SITE CONFIG
+## 站点地址 
 ## 处方运营端系统地址
 VUE_APP_SITE_OPERATION = 'https://preduroc.imedcloud.jk.com/'
 ## 互医运营端系统地址
