--- a/packages/repo-operation/.env.test
+++ b/packages/repo-operation/.env.test
@@ -11,16 +11,16 @@ NODE_ENV = 'production'
 VUE_APP_RELEASE_FLODER_PATH = '/web/'
 
 
-## API CONFIG
-## Server API
+## API 地址
+## API Base
 VUE_APP_API_BASE = 'https://testservice.imedcloud.jk.com/'
 ## API Auth
 VUE_APP_API_AUTH = 'https://testauth.imedcloud.jk.com/'
 ## API WebSocket
-VUE_APP_API_WEBSOCKET = 'ws://114.115.150.24:9999/admin/websocket'
+VUE_APP_API_WEBSOCKET = 'wss://testservice.imedcloud.jk.com/admin/websocket'
 
 
-## SITE CONFIG
+## 站点地址 
 ## 处方运营端系统地址
 VUE_APP_SITE_OPERATION = 'https://testduroc.imedcloud.jk.com/'
 ## 互医运营端系统地址
