--- a/packages/repo-pharmacist/.env
+++ b/packages/repo-pharmacist/.env
@@ -5,23 +5,18 @@
 ## 编译模式
 NODE_ENV = 'development'
 
-# AUTH CONFIG
-## CLIENT_ID
-VUE_APP_AUTH_CLIENT_ID = 'pharmacist'
-## CLIENT_SECRET
-VUE_APP_AUTH_CLIENT_SECRET = 'pharmacist'
-## 加密私有 key
-VUE_APP_AUTH_ENCRYPTION_KEY = 'sksksksksksksksk'
 
-# RELEASE CONFIG
-## Nginx 虚拟路径 , 影响 vue router history
+## Nginx 虚拟路径
 VUE_APP_RELEASE_FLODER_PATH = '/'
 
-# ROUTE CONFIG
-## 账户信息认证失败，redirect 401 
-VUE_APP_ROUTE_EXCEPTION_401 = '/401'
 
-# API CONFIG
+# AUTH CONFIG
+VUE_APP_AUTH_CLIENT_ID = 'pharmacist'
+VUE_APP_AUTH_CLIENT_SECRET = 'pharmacist'
+VUE_APP_AUTH_ENCRYPTION_KEY = 'sksksksksksksksk'
+
+
+# API 地址
 ## API MOCK
 VUE_APP_API_MOCK = 'https://yapi.imedcloud.jk.com/mock/25/'
 ## API BASE
@@ -29,8 +24,10 @@ VUE_APP_API_BASE = 'https://devservice.imedcloud.jk.com/'
 ## API Auth
 VUE_APP_API_AUTH = 'https://devauth.imedcloud.jk.com/'
 ## API WebSocket
-VUE_APP_API_WEBSOCKET = 'ws://114.115.150.24:9999/admin/websocket'
+VUE_APP_API_WEBSOCKET = 'wss://devservice.imedcloud.jk.com/admin/websocket'
 
-# SITE CONFIG
-## SITE BASE 
-VUE_APP_SITE_BASE = 'https://devdurhome.imedcloud.jk.com/'
+## 站点地址 
+## 官网地址
+VUE_APP_SITE_OFFCIAL = 'http://devweb.holoalpha.com/web/'
+## 药师端地址
+VUE_APP_SITE_PHARMACIST = 'https://devdurhome.imedcloud.jk.com/'
