--- a/packages/repo-pharmacist/.env.test
+++ b/packages/repo-pharmacist/.env.test
@@ -6,16 +6,22 @@
 ## 编译模式
 NODE_ENV = 'production'
 
-# API CONFIG
-## API MOCK
-VUE_APP_API_MOCK = 'https://yapi.imedcloud.jk.com/mock/25/'
-## API BASE
+
+## Nginx 虚拟路径
+VUE_APP_RELEASE_FLODER_PATH = '/'
+
+
+## API 地址
+## API Base
 VUE_APP_API_BASE = 'https://testservice.imedcloud.jk.com/'
 ## API Auth
 VUE_APP_API_AUTH = 'https://testauth.imedcloud.jk.com/'
 ## API WebSocket
-VUE_APP_API_WEBSOCKET = 'ws://114.115.150.24:9999/admin/websocket'
+VUE_APP_API_WEBSOCKET = 'wss://testservice.imedcloud.jk.com/admin/websocket'
 
-# SITE CONFIG
-## SITE BASE 
-VUE_APP_SITE_BASE = 'https://testdurhome.imedcloud.jk.com/'
+
+## 站点地址
+## 官网地址
+VUE_APP_SITE_OFFCIAL = 'https://testweb.holoalpha.com/web/'
+## 药师端地址
+VUE_APP_SITE_PHARMACIST = 'https://testdurhome.imedcloud.jk.com/'
