--- a/packages/repo-auth/.env
+++ b/packages/repo-auth/.env
@@ -6,27 +6,22 @@
 NODE_ENV = 'development'
 
 
-# AUTH CONFIG
-## CLIENT_ID
-VUE_APP_AUTH_CLIENT_ID = 'upms'
-## CLIENT_SECRET
-VUE_APP_AUTH_CLIENT_SECRET = 'upms'
-## 加密私有 key
-VUE_APP_AUTH_ENCRYPTION_KEY = 'sksksksksksksksk'
-
-
-# API CONFIG
-## API MOCK BASE
-VUE_APP_API_MOCK = 'https://yapi.imedcloud.jk.com/mock/25/'
-## API BASE
-VUE_APP_API_BASE = 'https://devauth.imedcloud.jk.com/'
-
-
-# RELEASE CONFIG
-## Nginx 虚拟路径 , 影响 vue router history
+## Nginx 虚拟路径
 VUE_APP_RELEASE_FLODER_PATH = '/'
 
 
-# ROUTE CONFIG
-## 账户信息认证失败，redirect 401 
-VUE_APP_ROUTE_EXCEPTION_401 = '/401'
+# AUTH CONFIG
+VUE_APP_AUTH_CLIENT_ID = 'upms'
+VUE_APP_AUTH_CLIENT_SECRET = 'upms'
+VUE_APP_AUTH_ENCRYPTION_KEY = 'sksksksksksksksk'
+
+
+## API 地址
+## API Mock
+VUE_APP_API_MOCK = 'https://yapi.imedcloud.jk.com/mock/25/'
+## API Base
+VUE_APP_API_BASE = 'https://devauth.imedcloud.jk.com/'
+## API Auth
+VUE_APP_API_AUTH = 'https://devauth.imedcloud.jk.com/'
+## API WebSocket
+VUE_APP_API_WEBSOCKET = 'wss://devservice.imedcloud.jk.com/admin/websocket'
