--- a/packages/repo-auth/.env.pre
+++ b/packages/repo-auth/.env.pre
@@ -5,3 +5,24 @@
 
 ## 编译模式
 NODE_ENV = 'production'
+
+
+## Nginx 虚拟路径
+VUE_APP_RELEASE_FLODER_PATH = '/'
+
+
+# AUTH CONFIG
+VUE_APP_AUTH_CLIENT_ID = 'upms'
+VUE_APP_AUTH_CLIENT_SECRET = 'upms'
+VUE_APP_AUTH_ENCRYPTION_KEY = 'sksksksksksksksk'
+
+
+## API 地址
+## API Mock
+VUE_APP_API_MOCK = 'https://yapi.imedcloud.jk.com/mock/25/'
+## API Base
+VUE_APP_API_BASE = 'https://preauth.imedcloud.jk.com/'
+## API Auth
+VUE_APP_API_AUTH = 'https://preauth.imedcloud.jk.com/'
+## API WebSocket
+VUE_APP_API_WEBSOCKET = 'wss://preservice.imedcloud.jk.com/admin/websocket'
