--- a/packages/repo-auth/.env.test
+++ b/packages/repo-auth/.env.test
@@ -23,6 +23,6 @@ VUE_APP_API_MOCK = 'https://yapi.imedcloud.jk.com/mock/25/'
 ## API Base
 VUE_APP_API_BASE = 'https://testauth.imedcloud.jk.com/'
 ## API Auth
-VUE_APP_API_Auth = 'https://testauth.imedcloud.jk.com/'
+VUE_APP_API_AUTH = 'https://testauth.imedcloud.jk.com/'
 ## API WebSocket
 VUE_APP_API_WEBSOCKET = 'wss://testservice.imedcloud.jk.com/admin/websocket'
