--- a/packages/repo-website/.env.test
+++ b/packages/repo-website/.env.test
@@ -26,4 +26,4 @@ VUE_APP_SITE_CONSOLE = 'https://testconsole.holoalpha.com/web/'
 ## 医生登录入口地址 
 VUE_APP_SITE_DOCTOR_WORKBENCH = 'https://testdoctor.imedcloud.jk.com/doctorpc/#/login'
 ## 药师登录入口地址 
-VUE_APP_SITE_PHARMACIST_WORKBENCH = 'https://testepharmacistweb.imedcloud.jk.com/'
+VUE_APP_SITE_PHARMACIST_WORKBENCH = 'https://testpharmacistweb.imedcloud.jk.com/'
