--- a/packages/repo-operation/.env
+++ b/packages/repo-operation/.env
@@ -17,17 +17,17 @@ VUE_APP_AUTH_ENCRYPTION_KEY = 'sksksksksksksksk'
 
 ## API 地址
 ## API Mock
-VUE_APP_API_MOCK = 'https://devyapi.holoalpha.com/mock/47/'
+VUE_APP_API_MOCK = 'https://testyapi.holoalpha.com/mock/47/'
 ## API Base
-VUE_APP_API_BASE = 'https://devservice.imedcloud.jk.com/'
+VUE_APP_API_BASE = 'https://testservice.imedcloud.jk.com/'
 ## API Auth
-VUE_APP_API_AUTH = 'https://devauth.imedcloud.jk.com/'
+VUE_APP_API_AUTH = 'https://testauth.imedcloud.jk.com/'
 ## API WebSocket
-VUE_APP_API_WEBSOCKET = 'wss://devservice.imedcloud.jk.com/admin/websocket'
+VUE_APP_API_WEBSOCKET = 'wss://testservice.imedcloud.jk.com/admin/websocket'
 
 
 ## 站点地址 
 ## 处方运营端系统地址
-VUE_APP_SITE_OPERATION = 'https://devduroc.imedcloud.jk.com/'
+VUE_APP_SITE_OPERATION = 'https://testduroc.imedcloud.jk.com/'
 ## 互医运营端系统地址
-VUE_APP_SITE_NETHOSPITAL = 'https://devapi.holoalpha.com/backend/#'
+VUE_APP_SITE_NETHOSPITAL = 'https://testapi.holoalpha.com/backend/#'
