--- a/packages/repo-organization/.env
+++ b/packages/repo-organization/.env
@@ -12,19 +12,19 @@ VUE_APP_RELEASE_FLODER_PATH = '/'
 
 ## API 地址
 ## API Mock
-VUE_APP_API_MOCK = 'https://devyapi.holoalpha.com/mock/43/'
+VUE_APP_API_MOCK = 'https://testyapi.holoalpha.com/mock/43/'
 ## API Base
-VUE_APP_API_BASE = 'https://devservice.imedcloud.jk.com/'
+VUE_APP_API_BASE = 'https://testservice.imedcloud.jk.com/'
 ## API Auth
-VUE_APP_API_AUTH = 'https://devauth.imedcloud.jk.com/'
+VUE_APP_API_AUTH = 'https://testauth.imedcloud.jk.com/'
 ## API WebSocket
-VUE_APP_API_WEBSOCKET = 'wss://devservice.imedcloud.jk.com/admin/websocket'
+VUE_APP_API_WEBSOCKET = 'wss://testservice.imedcloud.jk.com/admin/websocket'
 
 
 ## 站点地址 
 ## 官网地址
 VUE_APP_SITE_OFFCIAL = 'http://localhost:8080/'
 ## 处方共享管理、合理用药管理、药品供应管理地址
-VUE_APP_SITE_PRESCRIPTION = 'https://devdurhome.imedcloud.jk.com/'
+VUE_APP_SITE_PRESCRIPTION = 'https://testdurhome.imedcloud.jk.com/'
 ## 互联网医院地址
 VUE_APP_SITE_ORGANIZATION = 'http://localhost:8013/#/'
