--- a/packages/repo-doctor/.env
+++ b/packages/repo-doctor/.env
@@ -1,14 +1,23 @@
 ## NODE_ENV 
 ## 当开发环境时（npm run serve），当前环境变量生效。
+
+
+## 编译模式
 NODE_ENV = 'development'
 
 
-## MOCK API
-VUE_APP_MOCK_API = 'http://devyapi.holoalpha.com/mock/11/'
-## BASE API
-VUE_APP_BASE_API = 'https://devdoctor.holoalpha.com/'
-## HYBRID API
-VUE_APP_HYBRID_API = 'https://devweb.holoalpha.com/'
+## Nginx 虚拟路径
+VUE_APP_RELEASE_FLODER_PATH = '/'
 
-## IM KEY
+
+## API 地址
+## API Mock
+VUE_APP_API_MOCK = 'http://devyapi.holoalpha.com/mock/11/'
+## API Base
+VUE_APP_API_BASE = 'https://devdoctor.holoalpha.com/'
+## API Hybrid
+VUE_APP_API_HYBRID = 'https://devweb.holoalpha.com/'
+
+
+## IM Key
 VUE_APP_IM_KEY = '987faa06038223aa9151e8e6e974314e'
