--- a/packages/repo-doctor/.env.dev
+++ b/packages/repo-doctor/.env.dev
@@ -4,9 +4,9 @@
 NODE_ENV = 'production'
 
 ## BASE API
-VUE_APP_BASE_API = 'https://devdoctor.holoalpha.com/'
+VUE_APP_API_BASE = 'https://devdoctor.holoalpha.com/'
 ## HYBRID API
-VUE_APP_HYBRID_API = 'https://testweb.holoalpha.com/'
+VUE_APP_API_HYBRID = 'https://testweb.holoalpha.com/'
 
 ## IM KEY
 VUE_APP_IM_KEY = '987faa06038223aa9151e8e6e974314e'
