--- a/packages/repo-doctor/.env.prod
+++ b/packages/repo-doctor/.env.prod
@@ -4,9 +4,9 @@
 NODE_ENV = 'production'
 
 ## BASE API
-VUE_APP_BASE_API = 'https://doctor.holoalpha.com/'
+VUE_APP_API_BASE = 'https://doctor.holoalpha.com/'
 ## HYBRID API
-VUE_APP_HYBRID_API = 'https://web.holoalpha.com/'
+VUE_APP_API_HYBRID = 'https://web.holoalpha.com/'
 
 ## IM KEY
 VUE_APP_IM_KEY = 'a5b5212d7ff034b508d6e889040ffdf7'
