--- a/packages/repo-organization/package.json
+++ b/packages/repo-organization/package.json
@@ -22,6 +22,8 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.1",
+    "echarts": "^4.8.0",
+    "vue-echarts": "^5.0.0-beta.0",
     "jsonschema": "^1.2.6",
     "quasar": "^1.0.0",
     "vue": "^2.6.11",
