--- a/packages/repo-doctor/.env.dev
+++ b/packages/repo-doctor/.env.dev
@@ -1,12 +1,22 @@
 ## NODE_ENV 
 ## 当编译构建开发环境时（npm run build:dev），当前环境变量生效。
 ## 配置项将继承 .env , 并覆盖相同项。
+
+
+## 编译模式
 NODE_ENV = 'production'
 
-## BASE API
+
+## Nginx 虚拟路径
+VUE_APP_RELEASE_FLODER_PATH = '/doctorpc'
+
+
+## API 地址
+## API Base
 VUE_APP_API_BASE = 'https://devdoctor.holoalpha.com/'
-## HYBRID API
-VUE_APP_API_HYBRID = 'https://testweb.holoalpha.com/'
+## API Hybrid
+VUE_APP_API_HYBRID = 'https://devweb.holoalpha.com/'
+
 
 ## IM KEY
 VUE_APP_IM_KEY = '987faa06038223aa9151e8e6e974314e'
