--- a/packages/repo-doctor/.env.pre
+++ b/packages/repo-doctor/.env.pre
@@ -1,12 +1,23 @@
 ## NODE_ENV 
 ## 当编译构建生产环境时（npm run build:prod || npm run build），当前环境变量生效。
 ## 配置项将继承 .env , 并覆盖相同项。
+
+
+
+## 编译模式
 NODE_ENV = 'production'
 
-## BASE API
+
+## Nginx 虚拟路径
+VUE_APP_RELEASE_FLODER_PATH = '/doctorpc'
+
+
+## API 地址
+## API Base
 VUE_APP_API_BASE = 'https://predoctor.holoalpha.com/'
-## HYBRID API
+## API Hybrid
 VUE_APP_API_HYBRID = 'https://preweb.holoalpha.com/'
+
 
 ## IM KEY
 VUE_APP_IM_KEY = 'a5b5212d7ff034b508d6e889040ffdf7'
