--- a/packages/repo-doctor/.env.test
+++ b/packages/repo-doctor/.env.test
@@ -1,12 +1,23 @@
 ## NODE_ENV 
 ## 当编译构建测试环境时（npm run build:test），当前环境变量生效。
 ## 配置项将继承 .env , 并覆盖相同项。
+
+
+
+## 编译模式
 NODE_ENV = 'production'
 
-## BASE API
+
+## Nginx 虚拟路径
+VUE_APP_RELEASE_FLODER_PATH = '/doctorpc'
+
+
+## API 地址
+## API Base
 VUE_APP_API_BASE = 'https://testdoctor.holoalpha.com/'
-## HYBRID API
+## API Hybrid
 VUE_APP_API_HYBRID = 'https://testweb.holoalpha.com/'
+
 
 ## IM KEY
 VUE_APP_IM_KEY = '987faa06038223aa9151e8e6e974314e'
