--- a/packages/repo-doctor/.env.dev
+++ b/packages/repo-doctor/.env.dev
@@ -8,7 +8,7 @@ NODE_ENV = 'production'
 
 
 ## Nginx 虚拟路径
-VUE_APP_RELEASE_FLODER_PATH = '/doctorpc'
+VUE_APP_RELEASE_FLODER_PATH = '/doctorpc/'
 
 
 ## API 地址
