--- a/packages/repo-organization/.env.dev
+++ b/packages/repo-organization/.env.dev
@@ -22,7 +22,7 @@ VUE_APP_API_WEBSOCKET = 'wss://devservice.imedcloud.jk.com/admin/websocket'
 
 ## 站点地址
 ## 官网地址
-VUE_APP_SITE_OFFCIAL = 'http://devweb.holoalpha.com/web/'
+VUE_APP_SITE_OFFCIAL = 'https://devweb.holoalpha.com/web/'
 ## 处方共享管理、合理用药管理、药品供应管理地址
 VUE_APP_SITE_PRESCRIPTION = 'https://devdurhome.imedcloud.jk.com/'
 ## 互联网医院地址
