--- a/packages/repo-pharmacist/package.json
+++ b/packages/repo-pharmacist/package.json
@@ -24,7 +24,9 @@
     "quasar": "^1.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuex": "^3.5.1"
+    "vuex": "^3.5.1",
+    "echarts": "^4.8.0",
+    "vue-echarts": "^5.0.0-beta.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
