修改消息模板

--- a/packages/repo-pharmacist/.env
+++ b/packages/repo-pharmacist/.env
@@ -18,7 +18,7 @@ VUE_APP_AUTH_ENCRYPTION_KEY = 'sksksksksksksksk'
 
 # API 地址
 ## API MOCK
-VUE_APP_API_MOCK = 'https://yapi.imedcloud.jk.com/mock/25/'
+VUE_APP_API_MOCK = 'http://devyapi.holoalpha.com/mock/191/'
 ## API BASE
 VUE_APP_API_BASE = 'https://devservice.imedcloud.jk.com/'
 ## API Auth
