--- a/packages/repo-pharmacist/package.json
+++ b/packages/repo-pharmacist/package.json
@@ -16,17 +16,17 @@
   },
   "dependencies": {
     "@jk998/identity": "^0.2.4",
-    "@jk998/library": "^0.1.20",
-    "@jk998/peace-element-ui": "^0.1.8",
+    "@jk998/library": "^0.1.22",
+    "@jk998/peace-element-ui": "^0.1.12",
     "@quasar/extras": "^1.0.0",
     "core-js": "^3.6.5",
+    "echarts": "^4.8.0",
     "element-ui": "^2.13.2",
     "quasar": "^1.0.0",
     "vue": "^2.6.11",
+    "vue-echarts": "^5.0.0-beta.0",
     "vue-router": "^3.2.0",
-    "vuex": "^3.5.1",
-    "echarts": "^4.8.0",
-    "vue-echarts": "^5.0.0-beta.0"
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
