Feature ZHYY-665 Feature ZHYY-664 Feature ZHYY-675 Feature ZHYY-661

--- a/packages/repo-doctor/.env.prod
+++ b/packages/repo-doctor/.env.prod
@@ -14,6 +14,8 @@ VUE_APP_RELEASE_FLODER_PATH = '/doctorpc/'
 ## API 地址
 ## API Base
 VUE_APP_API_BASE = 'https://doctor.holoalpha.com/'
+## API Auth
+VUE_APP_API_AUTH = 'https://auth.imedcloud.jk.com/'
 ## API Hybrid
 VUE_APP_API_HYBRID = 'https://web.holoalpha.com/'
 
