--- a/packages/repo-doctor/.env
+++ b/packages/repo-doctor/.env
@@ -15,6 +15,8 @@ VUE_APP_RELEASE_FLODER_PATH = '/'
 VUE_APP_API_MOCK = 'http://devyapi.holoalpha.com/mock/17/'
 ## API Base
 VUE_APP_API_BASE = 'https://devdoctor.holoalpha.com/'
+## API Auth
+VUE_APP_API_AUTH = 'https://devauth.imedcloud.jk.com/'
 ## API Hybrid
 VUE_APP_API_HYBRID = 'https://devweb.holoalpha.com/'
 
