--- a/packages/repo-pharmacist/.env
+++ b/packages/repo-pharmacist/.env
@@ -20,14 +20,14 @@ VUE_APP_AUTH_ENCRYPTION_KEY = 'sksksksksksksksk'
 ## API MOCK
 VUE_APP_API_MOCK = 'http://devyapi.holoalpha.com/mock/191/'
 ## API BASE
-VUE_APP_API_BASE = 'https://devservice.imedcloud.jk.com/'
+VUE_APP_API_BASE = 'https://testservice.imedcloud.jk.com/'
 ## API Auth
-VUE_APP_API_AUTH = 'https://devauth.imedcloud.jk.com/'
+VUE_APP_API_AUTH = 'https://testauth.imedcloud.jk.com/'
 ## API WebSocket
-VUE_APP_API_WEBSOCKET = 'wss://devservice.imedcloud.jk.com/admin/websocket'
+VUE_APP_API_WEBSOCKET = 'wss://testservice.imedcloud.jk.com/admin/websocket'
 
 ## 站点地址 
 ## 官网地址
-VUE_APP_SITE_OFFCIAL = 'http://devweb.holoalpha.com/web/'
+VUE_APP_SITE_OFFCIAL = 'http://testweb.holoalpha.com/web/'
 ## 药师端地址
-VUE_APP_SITE_PHARMACIST = 'https://devdurhome.imedcloud.jk.com/'
+VUE_APP_SITE_PHARMACIST = 'https://testdurhome.imedcloud.jk.com/'
