--- a/packages/repo-patient/.env
+++ b/packages/repo-patient/.env
@@ -18,6 +18,6 @@ VUE_APP_MAP_KEY = 'S2WBZ-VHEK5-UCAIE-Q4TPB-LO7P3-DCB54'
 VUE_APP_APPID = 'wxed627bdde3060ade'
 
 ## 外链配置
-VUE_APP_IFRAME_BASE_URL='https://devweb.holoalpha.com/'
+VUE_APP_IFRAME_BASE_URL='https://devhybrid.holoalpha.com/'
 VUE_APP_IFRAME_BASE_PLATFORM='H5'
 
