--- a/packages/repo-patient/.env.prod
+++ b/packages/repo-patient/.env.prod
@@ -10,4 +10,4 @@ VUE_APP_BASE_API = 'https://patient.holoalpha.com/'
 VUE_APP_IM_KEY = 'a5b5212d7ff034b508d6e889040ffdf7'
 
 ## 外链配置
-VUE_APP_IFRAME_BASE_URL='https://web.holoalpha.com/'
+VUE_APP_IFRAME_BASE_URL='https://hybrid.holoalpha.com/'
