--- a/packages/repo-patient/.env.test
+++ b/packages/repo-patient/.env.test
@@ -10,4 +10,4 @@ VUE_APP_BASE_API = 'https://testpatient.holoalpha.com/'
 VUE_APP_IM_KEY = 'c54703f5fbc19e34d3aeb70a12a32f09'
 
 ## 外链配置
-VUE_APP_IFRAME_BASE_URL='https://testweb.holoalpha.com/'
+VUE_APP_IFRAME_BASE_URL='https://testhybrid.holoalpha.com/'
