--- a/packages/repo-patient/.env.dev
+++ b/packages/repo-patient/.env.dev
@@ -11,4 +11,4 @@ VUE_APP_IM_KEY = '00bac322a65420671e1c236b284ae5a0'
 
 
 ## 外链配置
-VUE_APP_IFRAME_BASE_URL='https://devweb.holoalpha.com/'
+VUE_APP_IFRAME_BASE_URL='https://devhybrid.holoalpha.com/'
