--- a/packages/repo-patient/.env.pre
+++ b/packages/repo-patient/.env.pre
@@ -10,4 +10,4 @@ VUE_APP_BASE_API = 'https://prepatient.holoalpha.com/'
 VUE_APP_IM_KEY = 'a5b5212d7ff034b508d6e889040ffdf7'
 
 ## 外链配置
-VUE_APP_IFRAME_BASE_URL='https://preweb.holoalpha.com/'
+VUE_APP_IFRAME_BASE_URL='https://prehybrid.holoalpha.com/'
