--- a/packages/repo-patient/package.json
+++ b/packages/repo-patient/package.json
@@ -17,7 +17,7 @@
     "core-js": "^3.1.2",
     "echarts": "^4.4.0",
     "nprogress": "^0.2.0",
-    "vant": "^2.10.0",
+    "vant": "2.12.5",
     "vconsole": "^3.3.4",
     "vue": "^2.6.10",
     "vue-echarts": "^4.0.4",
