Change domain to 'holoalpha.com

--- a/packages/repo-patient/.env
+++ b/packages/repo-patient/.env
@@ -3,7 +3,7 @@
 NODE_ENV = 'development'
 
 ## RELEASE FLODER PATH
-VUE_APP_RELEASE_FLODER_PATH = '/h5/'
+VUE_APP_RELEASE_FLODER_PATH = '/patient/'
 
 ## BASE API
 VUE_APP_BASE_API = 'https://devpatient.holoalpha.com/'
@@ -18,6 +18,6 @@ VUE_APP_MAP_KEY = 'S2WBZ-VHEK5-UCAIE-Q4TPB-LO7P3-DCB54'
 VUE_APP_APPID = 'wxed627bdde3060ade'
 
 ## 外链配置
-VUE_APP_IFRAME_BASE_URL='https://devhybrid.holoalpha.com/'
+VUE_APP_IFRAME_BASE_URL='https://devzyy.holoalpha.com/hybrid/'
 VUE_APP_IFRAME_BASE_PLATFORM='H5'
 
