--- a/packages/repo-patient/.env.dev
+++ b/packages/repo-patient/.env.dev
@@ -3,6 +3,9 @@
 ## 配置项将继承 .env , 并覆盖相同项。
 NODE_ENV = 'production'
 
+## RELEASE FLODER PATH
+VUE_APP_RELEASE_FLODER_PATH = '/patient/'
+
 ## BASE API
 VUE_APP_BASE_API = 'https://devpatient.holoalpha.com/'
 
@@ -11,4 +14,4 @@ VUE_APP_IM_KEY = '00bac322a65420671e1c236b284ae5a0'
 
 
 ## 外链配置
-VUE_APP_IFRAME_BASE_URL='https://devhybrid.holoalpha.com/'
+VUE_APP_IFRAME_BASE_URL='https://devzyy.holoalpha.com/hybrid/'
