--- a/packages/repo-patient/.env.prod
+++ b/packages/repo-patient/.env.prod
@@ -3,6 +3,9 @@
 ## 配置项将继承 .env , 并覆盖相同项。
 NODE_ENV = 'production'
 
+## RELEASE FLODER PATH
+VUE_APP_RELEASE_FLODER_PATH = '/patient/'
+
 ## BASE API
 VUE_APP_BASE_API = 'https://patient.holoalpha.com/'
 
@@ -10,4 +13,4 @@ VUE_APP_BASE_API = 'https://patient.holoalpha.com/'
 VUE_APP_IM_KEY = 'a5b5212d7ff034b508d6e889040ffdf7'
 
 ## 外链配置
-VUE_APP_IFRAME_BASE_URL='https://hybrid.holoalpha.com/'
+VUE_APP_IFRAME_BASE_URL='https://zyy.holoalpha.com/hybrid/'
