--- a/packages/repo-patient/.env.test
+++ b/packages/repo-patient/.env.test
@@ -3,6 +3,9 @@
 ## 配置项将继承 .env , 并覆盖相同项。
 NODE_ENV = 'production'
 
+## RELEASE FLODER PATH
+VUE_APP_RELEASE_FLODER_PATH = '/patient/'
+
 ## BASE API
 VUE_APP_BASE_API = 'https://testpatient.holoalpha.com/'
 
@@ -10,4 +13,4 @@ VUE_APP_BASE_API = 'https://testpatient.holoalpha.com/'
 VUE_APP_IM_KEY = 'a1458130b29307e51e7dfd00f981370b'
 
 ## 外链配置
-VUE_APP_IFRAME_BASE_URL='https://testhybrid.holoalpha.com/'
+VUE_APP_IFRAME_BASE_URL='https://testzyy.holoalpha.com/hybrid/'
