Change domain to 'holoalpha.com

--- a/packages/repo-operation/.env
+++ b/packages/repo-operation/.env
@@ -7,7 +7,7 @@ NODE_ENV = 'development'
 
 
 ## Nginx 虚拟路径
-VUE_APP_RELEASE_FLODER_PATH = '/'
+VUE_APP_RELEASE_FLODER_PATH = '/operate/'
 
 # AUTH CONFIG
 VUE_APP_AUTH_CLIENT_ID = 'operation'
@@ -19,15 +19,15 @@ VUE_APP_AUTH_ENCRYPTION_KEY = 'sksksksksksksksk'
 ## API Mock
 VUE_APP_API_MOCK = 'https://devyapi.holoalpha.com/mock/47/'
 ## API Base
-VUE_APP_API_BASE = 'https://devservice.imedcloud.jk.com/'
+VUE_APP_API_BASE = 'https://devzyyservice.holoalpha.com/'
 ## API Auth
-VUE_APP_API_AUTH = 'https://devauth.imedcloud.jk.com/'
+VUE_APP_API_AUTH = 'https://devauth.holoalpha.com/'
 ## API WebSocket
-VUE_APP_API_WEBSOCKET = 'wss://devservice.imedcloud.jk.com/admin/websocket'
+VUE_APP_API_WEBSOCKET = 'wss://devzyyservice.holoalpha.com/admin/websocket'
 
 
 ## 站点地址 
 ## 处方运营端系统地址
-VUE_APP_SITE_OPERATION = 'https://devduroc.imedcloud.jk.com/'
+VUE_APP_SITE_OPERATION = 'https://devduroc.holoalpha.com/'
 ## 互医运营端系统地址
-VUE_APP_SITE_NETHOSPITAL = 'https://devapi.holoalpha.com/backend/#'
+VUE_APP_SITE_NETHOSPITAL = 'https://devzyy.holoalpha.com/backend'
