--- a/packages/repo-operation/.env.pre
+++ b/packages/repo-operation/.env.pre
@@ -8,20 +8,20 @@ NODE_ENV = 'production'
 
 
 ## Nginx 虚拟路径
-VUE_APP_RELEASE_FLODER_PATH = '/'
+VUE_APP_RELEASE_FLODER_PATH = '/operate/'
 
 
 ## API 地址
 ## API Base
-VUE_APP_API_BASE = 'https://preservice.imedcloud.jk.com/'
+VUE_APP_API_BASE = 'https://prezyyservice.holoalpha.com/'
 ## API Auth
-VUE_APP_API_AUTH = 'https://preauth.imedcloud.jk.com/'
+VUE_APP_API_AUTH = 'https://preauth.holoalpha.com/'
 ## API WebSocket
-VUE_APP_API_WEBSOCKET = 'wss://preservice.imedcloud.jk.com/admin/websocket'
+VUE_APP_API_WEBSOCKET = 'wss://prezyyservice.holoalpha.com/admin/websocket'
 
 
 ## 站点地址 
 ## 处方运营端系统地址
-VUE_APP_SITE_OPERATION = 'https://preduroc.imedcloud.jk.com/'
+VUE_APP_SITE_OPERATION = 'https://preduroc.holoalpha.com/'
 ## 互医运营端系统地址
-VUE_APP_SITE_NETHOSPITAL = 'https://preapi.holoalpha.com/backend/#'
+VUE_APP_SITE_NETHOSPITAL = 'https://prezyy.holoalpha.com/backend'
