--- a/packages/repo-operation/.env.prod
+++ b/packages/repo-operation/.env.prod
@@ -8,20 +8,20 @@ NODE_ENV = 'production'
 
 
 ## Nginx 虚拟路径
-VUE_APP_RELEASE_FLODER_PATH = '/'
+VUE_APP_RELEASE_FLODER_PATH = '/operate/'
 
 
 ## API 地址
 ## API Base
-VUE_APP_API_BASE = 'https://service.imedcloud.jk.com/'
+VUE_APP_API_BASE = 'https://zyyservice.holoalpha.com/'
 ## API Auth
-VUE_APP_API_AUTH = 'https://auth.imedcloud.jk.com/'
+VUE_APP_API_AUTH = 'https://auth.holoalpha.com/'
 ## API WebSocket
-VUE_APP_API_WEBSOCKET = 'wss://service.imedcloud.jk.com/admin/websocket'
+VUE_APP_API_WEBSOCKET = 'wss://zyyservice.holoalpha.com/admin/websocket'
 
 
 ## 站点地址 
 ## 处方运营端系统地址
-VUE_APP_SITE_OPERATION = 'https://duroc.imedcloud.jk.com/'
+VUE_APP_SITE_OPERATION = 'https://duroc.holoalpha.com/'
 ## 互医运营端系统地址
-VUE_APP_SITE_NETHOSPITAL = 'https://api.holoalpha.com/backend/#'
+VUE_APP_SITE_NETHOSPITAL = 'https://zyy.holoalpha.com/backend'
