--- a/packages/repo-operation/.env.test
+++ b/packages/repo-operation/.env.test
@@ -8,20 +8,20 @@ NODE_ENV = 'production'
 
 
 ## Nginx 虚拟路径
-VUE_APP_RELEASE_FLODER_PATH = '/web/'
+VUE_APP_RELEASE_FLODER_PATH = '/operate/'
 
 
 ## API 地址
 ## API Base
-VUE_APP_API_BASE = 'https://testservice.imedcloud.jk.com/'
+VUE_APP_API_BASE = 'https://testzyyservice.holoalpha.com/'
 ## API Auth
-VUE_APP_API_AUTH = 'https://testauth.imedcloud.jk.com/'
+VUE_APP_API_AUTH = 'https://testauth.holoalpha.com/'
 ## API WebSocket
-VUE_APP_API_WEBSOCKET = 'wss://testservice.imedcloud.jk.com/admin/websocket'
+VUE_APP_API_WEBSOCKET = 'wss://testzyyservice.holoalpha.com/admin/websocket'
 
 
 ## 站点地址 
 ## 处方运营端系统地址
-VUE_APP_SITE_OPERATION = 'https://testduroc.imedcloud.jk.com/'
+VUE_APP_SITE_OPERATION = 'https://testduroc.holoalpha.com/'
 ## 互医运营端系统地址
-VUE_APP_SITE_NETHOSPITAL = 'https://testapi.holoalpha.com/backend/#'
+VUE_APP_SITE_NETHOSPITAL = 'https://testzyy.holoalpha.com/backend'
