Change domain to 'holoalpha.com'

--- a/packages/repo-pharmacist/.env.pre
+++ b/packages/repo-pharmacist/.env.pre
@@ -8,20 +8,20 @@ NODE_ENV = 'production'
 
 
 ## Nginx 虚拟路径
-VUE_APP_RELEASE_FLODER_PATH = '/'
+VUE_APP_RELEASE_FLODER_PATH = '/ys/'
 
 
 ## API 地址
 ## API Base
-VUE_APP_API_BASE = 'https://preservice.imedcloud.jk.com/'
+VUE_APP_API_BASE = 'https://prezyyservice.holoalpha.com/'
 ## API Auth
-VUE_APP_API_AUTH = 'https://preauth.imedcloud.jk.com/'
+VUE_APP_API_AUTH = 'https://preauth.holoalpha.com/'
 ## API WebSocket
-VUE_APP_API_WEBSOCKET = 'wss://preservice.imedcloud.jk.com/admin/websocket'
+VUE_APP_API_WEBSOCKET = 'wss://prezyyservice.holoalpha.com/admin/websocket'
 
 
 ## 站点地址
 ## 官网地址
-VUE_APP_SITE_OFFCIAL = 'https://preweb.imedcloud.jk.com/'
+VUE_APP_SITE_OFFCIAL = 'https://prezyy.holoalpha.com/'
 ## 药师端地址
-VUE_APP_SITE_PHARMACIST = 'https://predurhome.imedcloud.jk.com/'
+VUE_APP_SITE_PHARMACIST = 'https://predurhome.holoalpha.com/'
