--- a/packages/repo-pharmacist/.env.prod
+++ b/packages/repo-pharmacist/.env.prod
@@ -8,20 +8,20 @@ NODE_ENV = 'production'
 
 
 ## Nginx 虚拟路径
-VUE_APP_RELEASE_FLODER_PATH = '/'
+VUE_APP_RELEASE_FLODER_PATH = '/ys/'
 
 
 ## API 地址
 ## API Base
-VUE_APP_API_BASE = 'https://service.imedcloud.jk.com/'
+VUE_APP_API_BASE = 'https://zyyservice.holoalpha.com/'
 ## API Auth
-VUE_APP_API_AUTH = 'https://auth.imedcloud.jk.com/'
+VUE_APP_API_AUTH = 'https://auth.holoalpha.com/'
 ## API WebSocket
-VUE_APP_API_WEBSOCKET = 'wss://service.imedcloud.jk.com/admin/websocket'
+VUE_APP_API_WEBSOCKET = 'wss://zyyservice.holoalpha.com/admin/websocket'
 
 
 ## 站点地址
 ## 官网地址
-VUE_APP_SITE_OFFCIAL = 'https://web.imedcloud.jk.com/'
+VUE_APP_SITE_OFFCIAL = 'https://zyy.holoalpha.com/'
 ## 药师端地址
-VUE_APP_SITE_PHARMACIST = 'https://durhome.imedcloud.jk.com/'
+VUE_APP_SITE_PHARMACIST = 'https://durhome.holoalpha.com/'
