--- a/packages/repo-pharmacist/.env.test
+++ b/packages/repo-pharmacist/.env.test
@@ -8,20 +8,20 @@ NODE_ENV = 'production'
 
 
 ## Nginx 虚拟路径
-VUE_APP_RELEASE_FLODER_PATH = '/'
+VUE_APP_RELEASE_FLODER_PATH = '/ys/'
 
 
 ## API 地址
 ## API Base
-VUE_APP_API_BASE = 'https://testservice.imedcloud.jk.com/'
+VUE_APP_API_BASE = 'https://testzyyservice.holoalpha.com/'
 ## API Auth
-VUE_APP_API_AUTH = 'https://testauth.imedcloud.jk.com/'
+VUE_APP_API_AUTH = 'https://testauth.holoalpha.com/'
 ## API WebSocket
-VUE_APP_API_WEBSOCKET = 'wss://testservice.imedcloud.jk.com/admin/websocket'
+VUE_APP_API_WEBSOCKET = 'wss://testzyyservice.holoalpha.com/admin/websocket'
 
 
 ## 站点地址
 ## 官网地址
-VUE_APP_SITE_OFFCIAL = 'https://testweb.holoalpha.com/web/'
+VUE_APP_SITE_OFFCIAL = 'https://testzyy.holoalpha.com/'
 ## 药师端地址
-VUE_APP_SITE_PHARMACIST = 'https://testdurhome.imedcloud.jk.com/'
+VUE_APP_SITE_PHARMACIST = 'https://testdurhome.holoalpha.com/'
