--- a/packages/repo-pharmacist/.env.dev
+++ b/packages/repo-pharmacist/.env.dev
@@ -8,20 +8,20 @@ NODE_ENV = 'production'
 
 
 ## Nginx 虚拟路径
-VUE_APP_RELEASE_FLODER_PATH = '/'
+VUE_APP_RELEASE_FLODER_PATH = '/ys/'
 
 
 ## API 地址
 ## API Base
-VUE_APP_API_BASE = 'https://devservice.imedcloud.jk.com/'
+VUE_APP_API_BASE = 'https://devzyyservice.holoalpha.com/'
 ## API Auth
-VUE_APP_API_AUTH = 'https://devauth.imedcloud.jk.com/'
+VUE_APP_API_AUTH = 'https://devauth.holoalpha.com/'
 ## API WebSocket
-VUE_APP_API_WEBSOCKET = 'wss://devservice.imedcloud.jk.com/admin/websocket'
+VUE_APP_API_WEBSOCKET = 'wss://devzyyservice.holoalpha.com/admin/websocket'
 
 
 ## 站点地址
 ## 官网地址
-VUE_APP_SITE_OFFCIAL = 'http://devweb.holoalpha.com/web/'
+VUE_APP_SITE_OFFCIAL = 'https://devzyy.holoalpha.com/'
 ## 药师端地址
-VUE_APP_SITE_PHARMACIST = 'https://devdurhome.imedcloud.jk.com/'
+VUE_APP_SITE_PHARMACIST = 'https://devdurhome.holoalpha.com/'
