Change domain to 'holoalpha.com'

--- a/packages/repo-organization/.env.pre
+++ b/packages/repo-organization/.env.pre
@@ -8,22 +8,22 @@ NODE_ENV = 'production'
 
 
 ## Nginx 虚拟路径
-VUE_APP_RELEASE_FLODER_PATH = '/'
+VUE_APP_RELEASE_FLODER_PATH = '/console/'
 
 
 ## API 地址
 ## API Base
-VUE_APP_API_BASE = 'https://preservice.imedcloud.jk.com/'
+VUE_APP_API_BASE = 'https://prezyyservice.holoalpha.com/'
 ## API Auth
-VUE_APP_API_AUTH = 'https://preauth.imedcloud.jk.com/'
+VUE_APP_API_AUTH = 'https://preauth.holoalpha.com/'
 ## API WebSocket
-VUE_APP_API_WEBSOCKET = 'wss://preservice.imedcloud.jk.com/admin/websocket'
+VUE_APP_API_WEBSOCKET = 'wss://prezyyservice.holoalpha.com/admin/websocket'
 
 
 ## 站点地址
 ## 官网地址
-VUE_APP_SITE_OFFCIAL = 'https://preweb.imedcloud.jk.com/'
+VUE_APP_SITE_OFFCIAL = 'https://prezyy.holoalpha.com/website/'
 ## 处方共享管理、合理用药管理、药品供应管理地址
-VUE_APP_SITE_PRESCRIPTION = 'https://predurhome.imedcloud.jk.com/'
+VUE_APP_SITE_PRESCRIPTION = 'https://predurhome.holoalpha.com/'
 ## 互联网医院地址
-VUE_APP_SITE_ORGANIZATION = 'https://preapi.holoalpha.com/mechanism/#/'
+VUE_APP_SITE_ORGANIZATION = 'https://prezyy.holoalpha.com/hospital/'
