--- a/packages/repo-organization/.env
+++ b/packages/repo-organization/.env
@@ -7,24 +7,24 @@ NODE_ENV = 'development'
 
 
 ## Nginx 虚拟路径
-VUE_APP_RELEASE_FLODER_PATH = '/'
+VUE_APP_RELEASE_FLODER_PATH = '/console/'
 
 
 ## API 地址
 ## API Mock
 VUE_APP_API_MOCK = 'https://devyapi.holoalpha.com/mock/43/'
 ## API Base
-VUE_APP_API_BASE = 'https://devservice.imedcloud.jk.com/'
+VUE_APP_API_BASE = 'https://devzyyservice.holoalpha.com/'
 ## API Auth
-VUE_APP_API_AUTH = 'https://devauth.imedcloud.jk.com/'
+VUE_APP_API_AUTH = 'https://devauth.holoalpha.com/'
 ## API WebSocket
-VUE_APP_API_WEBSOCKET = 'wss://devservice.imedcloud.jk.com/admin/websocket'
+VUE_APP_API_WEBSOCKET = 'wss://devzyyservice.holoalpha.com/admin/websocket'
 
 
 ## 站点地址 
 ## 官网地址
 VUE_APP_SITE_OFFCIAL = 'http://localhost:8080/'
 ## 处方共享管理、合理用药管理、药品供应管理地址
-VUE_APP_SITE_PRESCRIPTION = 'https://devdurhome.imedcloud.jk.com/'
+VUE_APP_SITE_PRESCRIPTION = 'https://devdurhome.holoalpha.com/'
 ## 互联网医院地址
-VUE_APP_SITE_ORGANIZATION = 'http://localhost:8013/#/'
+VUE_APP_SITE_ORGANIZATION = 'http://localhost:8013/'
