--- a/packages/repo-organization/.env.test
+++ b/packages/repo-organization/.env.test
@@ -8,22 +8,22 @@ NODE_ENV = 'production'
 
 
 ## Nginx 虚拟路径
-VUE_APP_RELEASE_FLODER_PATH = '/web/'
+VUE_APP_RELEASE_FLODER_PATH = '/console/'
 
 
 ## API 地址
 ## API Base
-VUE_APP_API_BASE = 'https://testservice.imedcloud.jk.com/'
+VUE_APP_API_BASE = 'https://testservice.holoalpha.com/'
 ## API Auth
-VUE_APP_API_AUTH = 'https://testauth.imedcloud.jk.com/'
+VUE_APP_API_AUTH = 'https://testauth.holoalpha.com/'
 ## API WebSocket
-VUE_APP_API_WEBSOCKET = 'wss://testservice.imedcloud.jk.com/admin/websocket'
+VUE_APP_API_WEBSOCKET = 'wss://testservice.holoalpha.com/admin/websocket'
 
 
 ## 站点地址
 ## 官网地址
-VUE_APP_SITE_OFFCIAL = 'https://testweb.holoalpha.com/web/'
+VUE_APP_SITE_OFFCIAL = 'https://testzyy.holoalpha.com/website/'
 ## 处方共享管理、合理用药管理、药品供应管理地址
-VUE_APP_SITE_PRESCRIPTION = 'https://testdurhome.imedcloud.jk.com/'
+VUE_APP_SITE_PRESCRIPTION = 'https://testdurhome.holoalpha.com/'
 ## 互联网医院地址
-VUE_APP_SITE_ORGANIZATION = 'https://testapi.holoalpha.com/mechanism/#/'
+VUE_APP_SITE_ORGANIZATION = 'https://testzyy.holoalpha.com/hospital/'
