Change domain to 'holoalpha.com'

--- a/packages/repo-auth/.env.pre
+++ b/packages/repo-auth/.env.pre
@@ -8,7 +8,7 @@ NODE_ENV = 'production'
 
 
 ## Nginx 虚拟路径
-VUE_APP_RELEASE_FLODER_PATH = '/'
+VUE_APP_RELEASE_FLODER_PATH = '/auth/'
 
 
 # AUTH CONFIG
@@ -19,10 +19,10 @@ VUE_APP_AUTH_ENCRYPTION_KEY = 'sksksksksksksksk'
 
 ## API 地址
 ## API Mock
-VUE_APP_API_MOCK = 'https://yapi.imedcloud.jk.com/mock/25/'
+VUE_APP_API_MOCK = 'https://yapi.holoalpha.com/mock/25/'
 ## API Base
-VUE_APP_API_BASE = 'https://preauth.imedcloud.jk.com/'
+VUE_APP_API_BASE = 'https://preauth.holoalpha.com/'
 ## API Auth
-VUE_APP_API_AUTH = 'https://preauth.imedcloud.jk.com/'
+VUE_APP_API_AUTH = 'https://preauth.holoalpha.com/'
 ## API WebSocket
-VUE_APP_API_WEBSOCKET = 'wss://preservice.imedcloud.jk.com/admin/websocket'
+VUE_APP_API_WEBSOCKET = 'wss://prezyyservice.holoalpha.com/admin/websocket'
