--- a/packages/repo-auth/.env
+++ b/packages/repo-auth/.env
@@ -18,10 +18,10 @@ VUE_APP_AUTH_ENCRYPTION_KEY = 'sksksksksksksksk'
 
 ## API 地址
 ## API Mock
-VUE_APP_API_MOCK = 'https://yapi.imedcloud.jk.com/mock/25/'
+VUE_APP_API_MOCK = 'https://yapi.holoalpha.com/mock/25/'
 ## API Base
-VUE_APP_API_BASE = 'https://devauth.imedcloud.jk.com/'
+VUE_APP_API_BASE = 'https://devauth.holoalpha.com/'
 ## API Auth
-VUE_APP_API_AUTH = 'https://devauth.imedcloud.jk.com/'
+VUE_APP_API_AUTH = 'https://devauth.holoalpha.com/'
 ## API WebSocket
-VUE_APP_API_WEBSOCKET = 'wss://devservice.imedcloud.jk.com/admin/websocket'
+VUE_APP_API_WEBSOCKET = 'wss://devzyyservice.holoalpha.com/admin/websocket'
