--- a/packages/repo-website/.env.dev
+++ b/packages/repo-website/.env.dev
@@ -8,22 +8,22 @@ NODE_ENV = 'production'
 
 
 ## Nginx 虚拟路径
-VUE_APP_RELEASE_FLODER_PATH = '/web/'
+VUE_APP_RELEASE_FLODER_PATH = '/website/'
 
 
 ## API 地址
 ## API Base
 VUE_APP_API_BASE = 'https://devweb.holoalpha.com/'
 ## API Auth
-VUE_APP_API_AUTH = 'https://devauth.imedcloud.jk.com/'
+VUE_APP_API_AUTH = 'https://devauth.holoalpha.com/'
 ## API WebSocket
-VUE_APP_API_WEBSOCKET = 'wss://devservice.imedcloud.jk.com/admin/websocket'
+VUE_APP_API_WEBSOCKET = 'wss://devzyyservice.holoalpha.com/admin/websocket'
 
 
 ## 站点地址 
 ## 控制台地址 
-VUE_APP_SITE_CONSOLE = 'https://devconsole.holoalpha.com/web/'
+VUE_APP_SITE_CONSOLE = 'https://devzyy.holoalpha.com/console/'
 ## 医生登录入口地址 
-VUE_APP_SITE_DOCTOR_WORKBENCH = 'https://devdoctor.imedcloud.jk.com/doctorpc/#/login'
+VUE_APP_SITE_DOCTOR_WORKBENCH = 'https://devzyy.holoalpha.com/doctor'
 ## 药师登录入口地址 
-VUE_APP_SITE_PHARMACIST_WORKBENCH = 'https://devpharmacistweb.imedcloud.jk.com/'
+VUE_APP_SITE_PHARMACIST_WORKBENCH = 'https://devzyy.holoalpha.com/ys/'
