--- a/packages/repo-website/.env.test
+++ b/packages/repo-website/.env.test
@@ -8,22 +8,22 @@ NODE_ENV = 'production'
 
 
 ## Nginx 虚拟路径
-VUE_APP_RELEASE_FLODER_PATH = '/web/'
+VUE_APP_RELEASE_FLODER_PATH = '/website/'
 
 
 ## API 地址
 ## API Base
 VUE_APP_API_BASE = 'https://testweb.holoalpha.com/'
 ## API Auth
-VUE_APP_API_AUTH = 'https://testauth.imedcloud.jk.com/'
+VUE_APP_API_AUTH = 'https://testauth.holoalpha.com/'
 ## API WebSocket
-VUE_APP_API_WEBSOCKET = 'wss://testservice.imedcloud.jk.com/admin/websocket'
+VUE_APP_API_WEBSOCKET = 'wss://testzyyservice.holoalpha.com/admin/websocket'
 
 
 ## 站点地址 
 ## 控制台地址 
-VUE_APP_SITE_CONSOLE = 'https://testconsole.holoalpha.com/web/'
+VUE_APP_SITE_CONSOLE = 'https://testzyy.holoalpha.com/console/'
 ## 医生登录入口地址 
-VUE_APP_SITE_DOCTOR_WORKBENCH = 'https://testdoctor.imedcloud.jk.com/doctorpc/#/login'
+VUE_APP_SITE_DOCTOR_WORKBENCH = 'https://testzyy.holoalpha.com/doctor'
 ## 药师登录入口地址 
-VUE_APP_SITE_PHARMACIST_WORKBENCH = 'https://testpharmacistweb.imedcloud.jk.com/'
+VUE_APP_SITE_PHARMACIST_WORKBENCH = 'https://testzyy.holoalpha.com/ys/'
