--- a/packages/repo-website/.env
+++ b/packages/repo-website/.env
@@ -22,15 +22,15 @@ VUE_APP_API_MOCK = 'https://devyapi.holoalpha.com/mock/51/'
 ## API Base 
 VUE_APP_API_BASE = 'https://devweb.holoalpha.com/'
 ## API Auth 
-VUE_APP_API_AUTH = 'https://devauth.imedcloud.jk.com/'
+VUE_APP_API_AUTH = 'https://devauth.holoalpha.com/'
 ## API WebSocket
-VUE_APP_API_WEBSOCKET = 'wss://devservice.imedcloud.jk.com/admin/websocket'
+VUE_APP_API_WEBSOCKET = 'wss://devzyyservice.holoalpha.com/admin/websocket'
 
 
 ## 站点地址 
 ## 控制台地址 
 VUE_APP_SITE_CONSOLE = 'http://localhost:8081/'
 ## 医生登录入口地址 
-VUE_APP_SITE_DOCTOR_WORKBENCH = 'https://devdoctor.imedcloud.jk.com/doctorpc/#/login'
+VUE_APP_SITE_DOCTOR_WORKBENCH = 'https://devzyy.holoalpha.com/doctor'
 ## 药师登录入口地址 
-VUE_APP_SITE_PHARMACIST_WORKBENCH = 'https://devpharmacistweb.imedcloud.jk.com/'
+VUE_APP_SITE_PHARMACIST_WORKBENCH = 'https://devzyy.holoalpha.com/ys/'
