--- a/packages/repo-website/.env.pre
+++ b/packages/repo-website/.env.pre
@@ -8,22 +8,22 @@ NODE_ENV = 'production'
 
 
 ## Nginx 虚拟路径
-VUE_APP_RELEASE_FLODER_PATH = '/'
+VUE_APP_RELEASE_FLODER_PATH = '/website/'
 
 
 ## API 地址
 ## API Base
 VUE_APP_API_BASE = 'https://preweb.holoalpha.com/'
 ## API Auth
-VUE_APP_API_AUTH = 'https://preauth.imedcloud.jk.com/'
+VUE_APP_API_AUTH = 'https://preauth.holoalpha.com/'
 ## API WebSocket
-VUE_APP_API_WEBSOCKET = 'wss://preservice.imedcloud.jk.com/admin/websocket'
+VUE_APP_API_WEBSOCKET = 'wss://prezyyservice.holoalpha.com/admin/websocket'
 
 
 ## 站点地址 
 ## 控制台地址
-VUE_APP_SITE_CONSOLE = 'https://preconsole.imedcloud.jk.com/'
+VUE_APP_SITE_CONSOLE = 'https://prezyy.holoalpha.com/console/'
 ## 医生登录入口地址
-VUE_APP_SITE_DOCTOR_WORKBENCH = 'https://predoctor.imedcloud.jk.com/doctorpc/#/login'
+VUE_APP_SITE_DOCTOR_WORKBENCH = 'https://prezyy.holoalpha.com/doctor'
 ## 药师登录入口地址
-VUE_APP_SITE_PHARMACIST_WORKBENCH = 'https://prepharmacistweb.imedcloud.jk.com/'
+VUE_APP_SITE_PHARMACIST_WORKBENCH = 'https://prezyy.holoalpha.com/ys/'
