--- a/packages/repo-website/.env.prod
+++ b/packages/repo-website/.env.prod
@@ -8,22 +8,22 @@ NODE_ENV = 'production'
 
 
 ## Nginx 虚拟路径
-VUE_APP_RELEASE_FLODER_PATH = '/'
+VUE_APP_RELEASE_FLODER_PATH = '/website/'
 
 
 ## API 地址
 ## API Base
 VUE_APP_API_BASE = 'https://web.holoalpha.com/'
 ## API Auth
-VUE_APP_API_AUTH = 'https://auth.imedcloud.jk.com/'
+VUE_APP_API_AUTH = 'https://auth.holoalpha.com/'
 ## API WebSocket
-VUE_APP_API_WEBSOCKET = 'wss://service.imedcloud.jk.com/admin/websocket'
+VUE_APP_API_WEBSOCKET = 'wss://zyyservice.holoalpha.com/admin/websocket'
 
 
 ## 站点地址 
 ## 控制台地址
-VUE_APP_SITE_CONSOLE = 'https://console.imedcloud.jk.com/'
+VUE_APP_SITE_CONSOLE = 'https://zyy.holoalpha.com/console/'
 ## 医生登录入口地址
-VUE_APP_SITE_DOCTOR_WORKBENCH = 'https://doctor.imedcloud.jk.com/doctorpc/#/login'
+VUE_APP_SITE_DOCTOR_WORKBENCH = 'https://zyy.holoalpha.com/doctor'
 ## 药师登录入口地址
-VUE_APP_SITE_PHARMACIST_WORKBENCH = 'https://pharmacistweb.imedcloud.jk.com/'
+VUE_APP_SITE_PHARMACIST_WORKBENCH = 'https://zyy.holoalpha.com/ys/'
