Change domain to 'holoalpha.com'

--- a/packages/repo-doctor/.env
+++ b/packages/repo-doctor/.env
@@ -16,7 +16,7 @@ VUE_APP_API_MOCK = 'http://devyapi.holoalpha.com/mock/17/'
 ## API Base
 VUE_APP_API_BASE = 'https://devdoctor.holoalpha.com/'
 ## API Auth
-VUE_APP_API_AUTH = 'https://devauth.imedcloud.jk.com/'
+VUE_APP_API_AUTH = 'https://devauth.holoalpha.com/' 
 ## API Hybrid
 VUE_APP_API_HYBRID = 'https://devweb.holoalpha.com/'
 
