--- a/packages/repo-doctor/.env.pre
+++ b/packages/repo-doctor/.env.pre
@@ -8,14 +8,14 @@ NODE_ENV = 'production'
 
 
 ## Nginx 虚拟路径
-VUE_APP_RELEASE_FLODER_PATH = '/doctorpc/'
+VUE_APP_RELEASE_FLODER_PATH = '/doctor/'
 
 
 ## API 地址
 ## API Base
 VUE_APP_API_BASE = 'https://predoctor.holoalpha.com/'
 ## API Auth
-VUE_APP_API_AUTH = 'https://preauth.imedcloud.jk.com/'
+VUE_APP_API_AUTH = 'https://preauth.holoalpha.com/'
 ## API Hybrid
 VUE_APP_API_HYBRID = 'https://preweb.holoalpha.com/'
 
