Change domain to 'holoalpha.com'

--- a/packages/repo-hybrid/.env.dev
+++ b/packages/repo-hybrid/.env.dev
@@ -6,6 +6,11 @@
 ## 编译模式
 NODE_ENV = 'production'
 
+
+## Nginx 虚拟路径
+VUE_APP_RELEASE_FLODER_PATH = '/hybrid/'
+
+
 ## Server API
 VUE_APP_BASE_API = 'https://devdoctor.holoalpha.com/'
 ## Server API - iOS
@@ -18,6 +23,3 @@ VUE_APP_BASE_API_PC = 'https://devdoctor.holoalpha.com/client/'
 VUE_APP_BASE_API_H5 = 'https://devpatient.holoalpha.com/client/'
 ## Server API - Wechat
 VUE_APP_BASE_API_WECHAT = 'https://devpatient.holoalpha.com/client/'
-
-## IM KEY
-VUE_APP_IM_KEY = '987faa06038223aa9151e8e6e974314e'
