--- a/packages/repo-hybrid/.env
+++ b/packages/repo-hybrid/.env
@@ -5,8 +5,10 @@
 ## 编译模式
 NODE_ENV = 'development'
 
+
 ## Nginx 虚拟路径
-VUE_APP_RELEASE_FLODER_PATH = '/hybrid/'
+VUE_APP_RELEASE_FLODER_PATH = '/'
+
 
 ## API 路径
 ## Mock API
@@ -23,6 +25,3 @@ VUE_APP_BASE_API_PC = 'https://devdoctor.holoalpha.com/client/'
 VUE_APP_BASE_API_H5 = 'https://devpatient.holoalpha.com/client/'
 ## Server API - Wechat
 VUE_APP_BASE_API_WECHAT = 'https://devpatient.holoalpha.com/client/'
-
-## IM KEY
-VUE_APP_IM_KEY = '987faa06038223aa9151e8e6e974314e'
