--- a/packages/repo-hybrid/.env.pre
+++ b/packages/repo-hybrid/.env.pre
@@ -6,6 +6,11 @@
 ## 编译模式
 NODE_ENV = 'production'
 
+
+## Nginx 虚拟路径
+VUE_APP_RELEASE_FLODER_PATH = '/hybrid/'
+
+
 ## Server API
 VUE_APP_BASE_API = 'https://predoctor.holoalpha.com/'
 ## Server API - iOS
