Change domain to 'holoalpha.com'

--- a/packages/repo-organization/.env.prod
+++ b/packages/repo-organization/.env.prod
@@ -15,7 +15,7 @@ VUE_APP_RELEASE_FLODER_PATH = '/console/'
 ## API Base
 VUE_APP_API_BASE = 'https://zyyservice.holoalpha.com/'
 ## API Auth
-VUE_APP_API_AUTH = 'https://auth.holoalphak.com/'
+VUE_APP_API_AUTH = 'https://auth.holoalpha.com/'
 ## API WebSocket
 VUE_APP_API_WEBSOCKET = 'wss://zyyservice.holoalpha.com/admin/websocket'
 
