feat:北辰医院院内网络限制，导致无法获取IM信息
https://jira.yyjzt.com/browse/ZHYY-1745

--- a/packages/repo-doctor/package.json
+++ b/packages/repo-doctor/package.json
@@ -30,7 +30,8 @@
     "vue-echarts": "^4.0.3",
     "vue-fragment": "^1.5.1",
     "vue-router": "^3.0.6",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "websocket-as-promised": "^2.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.3.1",
