--- a/packages/repo-organization/.env.test
+++ b/packages/repo-organization/.env.test
@@ -13,11 +13,11 @@ VUE_APP_RELEASE_FLODER_PATH = '/console/'
 
 ## API 地址
 ## API Base
-VUE_APP_API_BASE = 'https://testservice.holoalpha.com/'
+VUE_APP_API_BASE = 'https://testzyyservice.holoalpha.com/'
 ## API Auth
 VUE_APP_API_AUTH = 'https://testauth.holoalpha.com/'
 ## API WebSocket
-VUE_APP_API_WEBSOCKET = 'wss://testservice.holoalpha.com/admin/websocket'
+VUE_APP_API_WEBSOCKET = 'wss://testzyyservice.holoalpha.com/admin/websocket'
 ## API hospital(互医下载文件、External等)
 VUE_APP_API_HOSPITAL = 'https://testapi.holoalpha.com/'
 
