因app小程序不适合根基接口获取IMkey,故手动配置

--- a/packages/repo-patient/.env.pre
+++ b/packages/repo-patient/.env.pre
@@ -10,7 +10,7 @@ VUE_APP_RELEASE_FLODER_PATH = '/patient/'
 VUE_APP_BASE_API = 'https://prepatient.holoalpha.com/'
 
 ## IM KEY
-## VUE_APP_IM_KEY = 'a5b5212d7ff034b508d6e889040ffdf7'
+VUE_APP_IM_KEY = 'a5b5212d7ff034b508d6e889040ffdf7'
 
 ## 外链配置
 VUE_APP_IFRAME_BASE_URL='https://prezyy.holoalpha.com/hybrid/'
