--- a/packages/repo-patient/.env
+++ b/packages/repo-patient/.env
@@ -9,7 +9,7 @@ VUE_APP_RELEASE_FLODER_PATH = '/patient/'
 VUE_APP_BASE_API = 'https://devpatient.holoalpha.com/'
 
 ## IM KEY
-## VUE_APP_IM_KEY = '00bac322a65420671e1c236b284ae5a0'
+VUE_APP_IM_KEY = '410341b94c0b7962c4c726783b8ff427'
 
 ## MAP KEY
 VUE_APP_MAP_KEY = 'S2WBZ-VHEK5-UCAIE-Q4TPB-LO7P3-DCB54'
