修改安卓跳转方式

--- a/packages/repo-hybrid/.env.dev
+++ b/packages/repo-hybrid/.env.dev
@@ -23,3 +23,7 @@ VUE_APP_BASE_API_PC = 'https://devdoctor.holoalpha.com/client/'
 VUE_APP_BASE_API_H5 = 'https://devpatient.holoalpha.com/client/'
 ## Server API - Wechat
 VUE_APP_BASE_API_WECHAT = 'https://devpatient.holoalpha.com/client/'
+
+## APP下载路径
+VUE_APP_DOWNLOAD_IOS = 'https://apps.apple.com/cn/app/万家云医/id1537044476'
+VUE_APP_DOWNLOAD_ANDROID = 'https://ehospital-prod-obs.obs.cn-east-2.myhuaweicloud.com/app/app_release.apk'
