feat:试处方列表接口

--- a/packages/repo-operation/.env
+++ b/packages/repo-operation/.env
@@ -19,7 +19,7 @@ VUE_APP_AUTH_ENCRYPTION_KEY = 'sksksksksksksksk'
 ## API Mock
 VUE_APP_API_MOCK = 'https://devyapi.holoalpha.com/mock/49/'
 ## API Base
-VUE_APP_API_BASE = 'https://devzyyservice.holoalpha.com/'
+VUE_APP_API_BASE = 'https://devtzyyservice.holoalpha.com/'
 ## API Auth
 VUE_APP_API_AUTH = 'https://devauth.holoalpha.com/'
 ## API WebSocket
