feat:添加审方env变量

--- a/packages/repo-operation/.env.pre
+++ b/packages/repo-operation/.env.pre
@@ -16,6 +16,9 @@ VUE_APP_RELEASE_FLODER_PATH = '/operate/'
 VUE_APP_API_BASE = 'https://prezyyservice.holoalpha.com/'
 ## API Auth
 VUE_APP_API_AUTH = 'https://preauth.holoalpha.com/'
+## API IDIC
+## VUE_APP_API_IDIC = 'https://preidic.holoalpha.com/'
+VUE_APP_API_IDIC = '/idic/'
 ## API WebSocket
 VUE_APP_API_WEBSOCKET = 'wss://prezyyservice.holoalpha.com/admin/websocket'
 
