--- a/packages/repo-operation/.env
+++ b/packages/repo-operation/.env
@@ -18,6 +18,9 @@ VUE_APP_AUTH_ENCRYPTION_KEY = 'sksksksksksksksk'
 ## API 地址
 ## API Mock
 VUE_APP_API_MOCK = 'https://devyapi.holoalpha.com/mock/49/'
+## API IDIC
+## VUE_APP_API_IDIC = 'https://devidic.holoalpha.com/'
+VUE_APP_API_IDIC = '/idic/'
 ## API Base
 VUE_APP_API_BASE = 'https://devzyyservice.holoalpha.com/'
 ## API Auth
