--- a/packages/repo-operation/.env.prod
+++ b/packages/repo-operation/.env.prod
@@ -16,6 +16,9 @@ VUE_APP_RELEASE_FLODER_PATH = '/operate/'
 VUE_APP_API_BASE = 'https://zyyservice.holoalpha.com/'
 ## API Auth
 VUE_APP_API_AUTH = 'https://auth.holoalpha.com/'
+## API IDIC
+## VUE_APP_API_IDIC = 'https://idic.holoalpha.com/'
+VUE_APP_API_IDIC = '/idic/'
 ## API WebSocket
 VUE_APP_API_WEBSOCKET = 'wss://zyyservice.holoalpha.com/admin/websocket'
 
