--- a/packages/repo-operation/.env.test
+++ b/packages/repo-operation/.env.test
@@ -16,6 +16,9 @@ VUE_APP_RELEASE_FLODER_PATH = '/operate/'
 VUE_APP_API_BASE = 'https://testzyyservice.holoalpha.com/'
 ## API Auth
 VUE_APP_API_AUTH = 'https://testauth.holoalpha.com/'
+## API IDIC
+## VUE_APP_API_IDIC = 'https://testidic.holoalpha.com/'
+VUE_APP_API_IDIC = '/idic/'
 ## API WebSocket
 VUE_APP_API_WEBSOCKET = 'wss://testzyyservice.holoalpha.com/admin/websocket'
 
