chore:change env

--- a/packages/repo-operation/.env.prod
+++ b/packages/repo-operation/.env.prod
@@ -17,7 +17,7 @@ VUE_APP_API_BASE = 'https://zyyservice.holoalpha.com/'
 ## API Auth
 VUE_APP_API_AUTH = 'https://auth.holoalpha.com/'
 ## API IDIC
-VUE_APP_API_IDIC = 'https://idic.holoalpha.com/'
+VUE_APP_API_IDIC = 'https://idic.holoalpha.com/apis/'
 ## API WebSocket
 VUE_APP_API_WEBSOCKET = 'wss://zyyservice.holoalpha.com/admin/websocket'
 
