--- a/packages/repo-operation/.env.dev
+++ b/packages/repo-operation/.env.dev
@@ -17,13 +17,13 @@ VUE_APP_API_BASE = 'https://devzyyservice.holoalpha.com/'
 ## API Auth
 VUE_APP_API_AUTH = 'https://devauth.holoalpha.com/'
 ## API IDIC
-VUE_APP_API_IDIC = 'https://devidic.holoalpha.com/'
+VUE_APP_API_IDIC = 'https://devidic.holoalpha.com/apis/'
 ## API WebSocket
 VUE_APP_API_WEBSOCKET = 'wss://devzyyservice.holoalpha.com/admin/websocket'
 
 
 ## 站点地址 
 ## 处方运营端系统地址
-VUE_APP_SITE_OPERATION = 'https://devduroc.holoalpha.com/'
+VUE_APP_SITE_OPERATION = 'https://devduroc.holoalpha.com/apis/'
 ## 互医运营端系统地址
 VUE_APP_SITE_NETHOSPITAL = 'https://devzyy.holoalpha.com/backend'
