--- a/packages/repo-operation/.env.pre
+++ b/packages/repo-operation/.env.pre
@@ -17,7 +17,7 @@ VUE_APP_API_BASE = 'https://prezyyservice.holoalpha.com/'
 ## API Auth
 VUE_APP_API_AUTH = 'https://preauth.holoalpha.com/'
 ## API IDIC
-VUE_APP_API_IDIC = 'https://preidic.holoalpha.com/'
+VUE_APP_API_IDIC = 'https://preidic.holoalpha.com/apis/'
 ## API WebSocket
 VUE_APP_API_WEBSOCKET = 'wss://prezyyservice.holoalpha.com/admin/websocket'
 
