--- a/packages/repo-patient/.env
+++ b/packages/repo-patient/.env
@@ -17,6 +17,9 @@ VUE_APP_MAP_KEY = 'S2WBZ-VHEK5-UCAIE-Q4TPB-LO7P3-DCB54'
 ## 微信公众号 appid
 VUE_APP_APPID = 'wxed627bdde3060ade'
 
+## 神策埋点 server_url
+VUE_APP_SA_SERVER_URL = 'http://10.0.23.24:8000/sa.gif?project=zyy_dev&remark=cktest'
+
 ## 外链配置
 VUE_APP_IFRAME_BASE_URL='https://devzyy.holoalpha.com/hybrid/'
 VUE_APP_IFRAME_BASE_PLATFORM='H5'
