--- a/packages/repo-patient/.env.dev
+++ b/packages/repo-patient/.env.dev
@@ -12,6 +12,8 @@ VUE_APP_BASE_API = 'https://devpatient.holoalpha.com/'
 ## IM KEY
 VUE_APP_IM_KEY = 'f4eeda44cbf0c3f4fefdb4fc49a3fb20'
 
+## 神策埋点 server_url
+VUE_APP_SA_SERVER_URL = 'http://10.0.23.24:8000/sa.gif?project=zyy_dev&remark=cktest'
 
 ## 外链配置
 VUE_APP_IFRAME_BASE_URL='https://devzyy.holoalpha.com/hybrid/'
