--- a/packages/repo-patient/.env.test
+++ b/packages/repo-patient/.env.test
@@ -12,5 +12,8 @@ VUE_APP_BASE_API = 'https://testpatient.holoalpha.com/'
 ## IM KEY
 VUE_APP_IM_KEY = 'a0621fc978d29803bb391b8b4d47d241'
 
+## 神策埋点 server_url
+VUE_APP_SA_SERVER_URL = 'https://track.jk.com/sa.gif?project=zyy_test&remark=cktest'
+
 ## 外链配置
 VUE_APP_IFRAME_BASE_URL='https://testzyy.holoalpha.com/hybrid/'
