--- a/packages/repo-patient/package.json
+++ b/packages/repo-patient/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.1.2",
     "echarts": "^4.4.0",
     "nprogress": "^0.2.0",
+    "sa-sdk-javascript": "^1.18.2",
     "vant": "2.12.5",
     "vconsole": "^3.3.4",
     "vue": "^2.6.10",
