fix:机构主页分享链接配置修改

--- a/packages/repo-patient/.env
+++ b/packages/repo-patient/.env
@@ -20,6 +20,9 @@ VUE_APP_APPID = 'wxed627bdde3060ade'
 ## 神策埋点 server_url
 VUE_APP_SA_SERVER_URL = 'http://10.0.23.24:8000/sa.gif?project=zyy_dev&remark=cktest'
 
+## H5访问链接
+VUE_APP_BASE_URL = 'http://localhost:8080/'
+
 ## 外链配置
 VUE_APP_IFRAME_BASE_URL='https://devzyy.holoalpha.com/hybrid/'
 VUE_APP_IFRAME_BASE_PLATFORM='H5'
