--- a/packages/repo-patient/.env.dev
+++ b/packages/repo-patient/.env.dev
@@ -15,5 +15,8 @@ VUE_APP_IM_KEY = 'b8206837b1a123793fe86e52e371d447'
 ## 神策埋点 server_url
 VUE_APP_SA_SERVER_URL = 'http://10.0.23.24:8000/sa.gif?project=zyy_dev&remark=cktest'
 
+## H5访问链接
+VUE_APP_BASE_URL = 'https://devzyy.holoalpha.com/'
+
 ## 外链配置
 VUE_APP_IFRAME_BASE_URL='https://devzyy.holoalpha.com/hybrid/'
