--- a/packages/repo-patient/.env.pre
+++ b/packages/repo-patient/.env.pre
@@ -15,5 +15,8 @@ VUE_APP_IM_KEY = 'a5b5212d7ff034b508d6e889040ffdf7'
 ## 神策埋点 server_url
 VUE_APP_SA_SERVER_URL = 'https://track.jk.com/sa.gif?project=zyy_pre&remark=cktest'
 
+## H5访问链接
+VUE_APP_BASE_URL = 'https://prezyy.holoalpha.com/'
+
 ## 外链配置
 VUE_APP_IFRAME_BASE_URL='https://prezyy.holoalpha.com/hybrid/'
