--- a/packages/repo-patient/.env.test
+++ b/packages/repo-patient/.env.test
@@ -15,5 +15,8 @@ VUE_APP_IM_KEY = 'eb959e13893443046d7d1767d540ea14'
 ## 神策埋点 server_url
 VUE_APP_SA_SERVER_URL = 'https://track.jk.com/sa.gif?project=zyy_test&remark=cktest'
 
+## H5访问链接
+VUE_APP_BASE_URL = 'https://testzyy.holoalpha.com/'
+
 ## 外链配置
 VUE_APP_IFRAME_BASE_URL='https://testzyy.holoalpha.com/hybrid/'
