feat:字典切换域名

--- a/packages/repo-operation/.env.dev
+++ b/packages/repo-operation/.env.dev
@@ -17,7 +17,7 @@ VUE_APP_API_BASE = 'https://devzyyservice.holoalpha.com/'
 ## API Auth
 VUE_APP_API_AUTH = 'https://devauth.holoalpha.com/'
 ## API IDIC
-VUE_APP_API_IDIC = 'https://devidic.holoalpha.com/apis/'
+VUE_APP_API_IDIC = 'https://devdurservice.holoalpha.com/idic/'
 ## API WebSocket
 VUE_APP_API_WEBSOCKET = 'wss://devzyyservice.holoalpha.com/admin/websocket'
 
