--- a/packages/repo-operation/.env
+++ b/packages/repo-operation/.env
@@ -19,7 +19,7 @@ VUE_APP_AUTH_ENCRYPTION_KEY = 'sksksksksksksksk'
 ## API Mock
 VUE_APP_API_MOCK = 'https://devyapi.holoalpha.com/mock/49/'
 ## API IDIC
-VUE_APP_API_IDIC = '/idic/'
+VUE_APP_API_IDIC = 'https://devdurservice.holoalpha.com/idic/'
 ## API Base
 VUE_APP_API_BASE = 'https://devzyyservice.holoalpha.com/'
 ## API Auth
