--- a/packages/repo-operation/.env.test
+++ b/packages/repo-operation/.env.test
@@ -17,7 +17,7 @@ VUE_APP_API_BASE = 'https://testzyyservice.holoalpha.com/'
 ## API Auth
 VUE_APP_API_AUTH = 'https://testauth.holoalpha.com/'
 ## API IDIC
-VUE_APP_API_IDIC = 'https://testidic.holoalpha.com/apis/'
+VUE_APP_API_IDIC = 'https://testdurservice.holoalpha.com/idic/'
 ## API WebSocket
 VUE_APP_API_WEBSOCKET = 'wss://testzyyservice.holoalpha.com/admin/websocket'
 
